commit bilingual contents

--- a/docs/visual-basic/misc/bc30023.md
+++ b/docs/visual-basic/misc/bc30023.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30023
 ms.assetid: ac290f7d-cbc3-4979-a5d9-1ae1bb26e79d
-ms.openlocfilehash: b0c6d62ce1e4ebc98311d18b4e1d8d3ac0ad8f59
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2e8d00fc455ab6aa32c9bbba7497ceda308cb062
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64584109"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366554"
 ---
-# <a name="properties-declared-writeonly-cannot-have-a-get"></a><span data-ttu-id="feebb-102">Le proprietà dichiarate 'WriteOnly' non possono avere un 'Get'</span><span class="sxs-lookup"><span data-stu-id="feebb-102">Properties declared 'WriteOnly' cannot have a 'Get'</span></span>
-<span data-ttu-id="feebb-103">La routine `Get` legge il valore di una proprietà.</span><span class="sxs-lookup"><span data-stu-id="feebb-103">The `Get` procedure reads the value of a property.</span></span> <span data-ttu-id="feebb-104">Le proprietà`WriteOnly` non possono essere lette.</span><span class="sxs-lookup"><span data-stu-id="feebb-104">`WriteOnly` properties cannot be read.</span></span>  
+# <a name="properties-declared-writeonly-cannot-have-a-get"></a><span data-ttu-id="36b89-102">Le proprietà dichiarate 'WriteOnly' non possono avere un 'Get'</span><span class="sxs-lookup"><span data-stu-id="36b89-102">Properties declared 'WriteOnly' cannot have a 'Get'</span></span>
+<span data-ttu-id="36b89-103">La routine `Get` legge il valore di una proprietà.</span><span class="sxs-lookup"><span data-stu-id="36b89-103">The `Get` procedure reads the value of a property.</span></span> <span data-ttu-id="36b89-104">Le proprietà`WriteOnly` non possono essere lette.</span><span class="sxs-lookup"><span data-stu-id="36b89-104">`WriteOnly` properties cannot be read.</span></span>  
   
- <span data-ttu-id="feebb-105">**ID errore:** BC30023</span><span class="sxs-lookup"><span data-stu-id="feebb-105">**Error ID:** BC30023</span></span>  
+ <span data-ttu-id="36b89-105">**ID errore:** BC30023</span><span class="sxs-lookup"><span data-stu-id="36b89-105">**Error ID:** BC30023</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="feebb-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="feebb-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="36b89-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="36b89-106">To correct this error</span></span>  
   
-- <span data-ttu-id="feebb-107">Rimuovere la parola chiave `WriteOnly` dall'istruzione `Property` oppure la routine `Get` dal corpo della proprietà.</span><span class="sxs-lookup"><span data-stu-id="feebb-107">Remove the `WriteOnly` keyword from the `Property` statement, or remove the `Get` procedure from the property body.</span></span>  
+- <span data-ttu-id="36b89-107">Rimuovere la parola chiave `WriteOnly` dall'istruzione `Property` oppure la routine `Get` dal corpo della proprietà.</span><span class="sxs-lookup"><span data-stu-id="36b89-107">Remove the `WriteOnly` keyword from the `Property` statement, or remove the `Get` procedure from the property body.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="feebb-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="feebb-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="36b89-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="36b89-108">See also</span></span>
 
-- [<span data-ttu-id="feebb-109">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="feebb-109">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
-- [<span data-ttu-id="feebb-110">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="feebb-110">Get Statement</span></span>](../../visual-basic/language-reference/statements/get-statement.md)
-- [<span data-ttu-id="feebb-111">WriteOnly</span><span class="sxs-lookup"><span data-stu-id="feebb-111">WriteOnly</span></span>](../../visual-basic/language-reference/modifiers/writeonly.md)
+- [<span data-ttu-id="36b89-109">Property Statement</span><span class="sxs-lookup"><span data-stu-id="36b89-109">Property Statement</span></span>](../language-reference/statements/property-statement.md)
+- [<span data-ttu-id="36b89-110">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="36b89-110">Get Statement</span></span>](../language-reference/statements/get-statement.md)
+- [<span data-ttu-id="36b89-111">WriteOnly</span><span class="sxs-lookup"><span data-stu-id="36b89-111">WriteOnly</span></span>](../language-reference/modifiers/writeonly.md)
