--- a/docs/visual-basic/misc/bc30277.md
+++ b/docs/visual-basic/misc/bc30277.md
@@ -1,5 +1,5 @@
 ---
-title: Carattere di tipo '<charactername>'non corrisponde al tipo dati dichiarato'<type>'
+title: Il carattere tipo ' <charactername> ' non corrisponde al tipo di dati dichiarato ' <type> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30277
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30277
 ms.assetid: 9808f57e-a46c-43f9-b5e7-275794627763
-ms.openlocfilehash: 0ab7b67c99fc525e669ec9ac212ac7b50fc66f37
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 90c55bb61bb6cca88573f81fb82d0e9928165330
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664074"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390780"
 ---
-# <a name="type-character-charactername-does-not-match-declared-data-type-type"></a><span data-ttu-id="b4ad0-102">Carattere di tipo '\<Nomecarattere >' non corrisponde tipo dati dichiarato '\<tipo >'</span><span class="sxs-lookup"><span data-stu-id="b4ad0-102">Type character '\<charactername>' does not match declared data type '\<type>'</span></span>
-<span data-ttu-id="b4ad0-103">Una variabile è dichiarata con un tipo di dati ma si fa riferimento a essa con un carattere di tipo che rappresenta un tipo di dati incompatibile, ad esempio `K$ = 10` quando `K` è dichiarato come `Integer`.</span><span class="sxs-lookup"><span data-stu-id="b4ad0-103">A variable is declared with one data type but referred to with a type character representing an incompatible data type, for example `K$ = 10` when `K` is declared `Integer`.</span></span>  
+# <a name="type-character-charactername-does-not-match-declared-data-type-type"></a><span data-ttu-id="98763-102">Il carattere tipo ' \<charactername> ' non corrisponde al tipo di dati dichiarato ' \<type> '</span><span class="sxs-lookup"><span data-stu-id="98763-102">Type character '\<charactername>' does not match declared data type '\<type>'</span></span>
+<span data-ttu-id="98763-103">Una variabile è dichiarata con un tipo di dati ma si fa riferimento a essa con un carattere di tipo che rappresenta un tipo di dati incompatibile, ad esempio `K$ = 10` quando `K` è dichiarato come `Integer`.</span><span class="sxs-lookup"><span data-stu-id="98763-103">A variable is declared with one data type but referred to with a type character representing an incompatible data type, for example `K$ = 10` when `K` is declared `Integer`.</span></span>  
   
- <span data-ttu-id="b4ad0-104">**ID errore:** BC30277</span><span class="sxs-lookup"><span data-stu-id="b4ad0-104">**Error ID:** BC30277</span></span>  
+ <span data-ttu-id="98763-104">**ID errore:** BC30277</span><span class="sxs-lookup"><span data-stu-id="98763-104">**Error ID:** BC30277</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b4ad0-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b4ad0-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="98763-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="98763-105">To correct this error</span></span>  
   
-- <span data-ttu-id="b4ad0-106">Modificare il tipo di dati dichiarato della variabile oppure modificare o rimuovere il tipo di carattere nel riferimento.</span><span class="sxs-lookup"><span data-stu-id="b4ad0-106">Change the declared data type of the variable, or change or remove the type character in the reference.</span></span>  
+- <span data-ttu-id="98763-106">Modificare il tipo di dati dichiarato della variabile oppure modificare o rimuovere il tipo di carattere nel riferimento.</span><span class="sxs-lookup"><span data-stu-id="98763-106">Change the declared data type of the variable, or change or remove the type character in the reference.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b4ad0-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b4ad0-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="98763-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="98763-107">See also</span></span>
 
-- [<span data-ttu-id="b4ad0-108">Caratteri tipo</span><span class="sxs-lookup"><span data-stu-id="b4ad0-108">Type Characters</span></span>](../../visual-basic/programming-guide/language-features/data-types/type-characters.md)
+- [<span data-ttu-id="98763-108">Caratteri tipo</span><span class="sxs-lookup"><span data-stu-id="98763-108">Type Characters</span></span>](../programming-guide/language-features/data-types/type-characters.md)
