--- a/docs/visual-basic/misc/bc30289.md
+++ b/docs/visual-basic/misc/bc30289.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30289
 ms.assetid: 9dc332e2-3dd7-4159-959b-6776345c9d0c
-ms.openlocfilehash: 070802e6b4c3c58e0a348dc7e8b224247aeb03d4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 15c3fc4c5a083aba4f14f9aeb9ac7a4ca77147b9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664009"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390617"
 ---
-# <a name="statement-cannot-appear-within-a-method-body"></a><span data-ttu-id="7fda4-102">L'istruzione non può essere specificata nel corpo di un metodo</span><span class="sxs-lookup"><span data-stu-id="7fda4-102">Statement cannot appear within a method body</span></span>
-<span data-ttu-id="7fda4-103">Una routine contiene un'istruzione non valida, ad esempio un'altra dichiarazione di routine.</span><span class="sxs-lookup"><span data-stu-id="7fda4-103">A procedure contains an invalid statement such as another procedure declaration.</span></span> <span data-ttu-id="7fda4-104">Le dichiarazioni di routine non possono essere nidificate.</span><span class="sxs-lookup"><span data-stu-id="7fda4-104">Procedure declarations cannot be nested.</span></span>  
+# <a name="statement-cannot-appear-within-a-method-body"></a><span data-ttu-id="f7f6e-102">L'istruzione non può essere specificata nel corpo di un metodo</span><span class="sxs-lookup"><span data-stu-id="f7f6e-102">Statement cannot appear within a method body</span></span>
+<span data-ttu-id="f7f6e-103">Una routine contiene un'istruzione non valida, ad esempio un'altra dichiarazione di routine.</span><span class="sxs-lookup"><span data-stu-id="f7f6e-103">A procedure contains an invalid statement such as another procedure declaration.</span></span> <span data-ttu-id="f7f6e-104">Le dichiarazioni di routine non possono essere nidificate.</span><span class="sxs-lookup"><span data-stu-id="f7f6e-104">Procedure declarations cannot be nested.</span></span>  
   
- <span data-ttu-id="7fda4-105">**ID errore:** BC30289</span><span class="sxs-lookup"><span data-stu-id="7fda4-105">**Error ID:** BC30289</span></span>  
+ <span data-ttu-id="f7f6e-105">**ID errore:** BC30289</span><span class="sxs-lookup"><span data-stu-id="f7f6e-105">**Error ID:** BC30289</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="7fda4-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7fda4-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f7f6e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f7f6e-106">To correct this error</span></span>  
   
-- <span data-ttu-id="7fda4-107">Rimuovere la dichiarazione di routine, oppure spostarla al di fuori della routine in cui è racchiusa.</span><span class="sxs-lookup"><span data-stu-id="7fda4-107">Remove the procedure declaration, or move it outside the enclosing procedure.</span></span>  
+- <span data-ttu-id="f7f6e-107">Rimuovere la dichiarazione di routine, oppure spostarla al di fuori della routine in cui è racchiusa.</span><span class="sxs-lookup"><span data-stu-id="f7f6e-107">Remove the procedure declaration, or move it outside the enclosing procedure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7fda4-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7fda4-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f7f6e-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f7f6e-108">See also</span></span>
 
-- [<span data-ttu-id="7fda4-109">Routine</span><span class="sxs-lookup"><span data-stu-id="7fda4-109">Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/index.md)
+- [<span data-ttu-id="f7f6e-109">Procedure</span><span class="sxs-lookup"><span data-stu-id="f7f6e-109">Procedures</span></span>](../programming-guide/language-features/procedures/index.md)
