--- a/docs/visual-basic/misc/bc30547.md
+++ b/docs/visual-basic/misc/bc30547.md
@@ -1,5 +1,5 @@
 ---
-title: Interfaccia '<interfacename>' non può essere indicizzata perché non contiene proprietà predefinite
+title: Impossibile indicizzare '<interfacename>' perché non contiene proprietà predefinite
 ms.date: 07/20/2015
 f1_keywords:
 - bc30547
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30547
 ms.assetid: d9d83868-5e81-4ec5-878e-2303489d8f2f
-ms.openlocfilehash: 3a0d17c18898e5cc7ff89fd9ff4fe16e7f6ab8b1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: be1e66705d3e4d5ef6e7049bf8e286f7f01da054
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625213"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390305"
 ---
-# <a name="interface-interfacename-cannot-be-indexed-because-it-has-no-default-property"></a><span data-ttu-id="565d4-102">Interfaccia '\<nomeinterfaccia >' non può essere indicizzata perché non contiene proprietà predefinite</span><span class="sxs-lookup"><span data-stu-id="565d4-102">Interface '\<interfacename>' cannot be indexed because it has no default property</span></span>
-<span data-ttu-id="565d4-103">Le espressioni di indice devono risultare in un valore il cui tipo sia una matrice, possegga un set di proprietà predefinite in overload o in un set di proprietà in overload.</span><span class="sxs-lookup"><span data-stu-id="565d4-103">Index expressions must result in a value whose type is an array, in a value whose type has a set of overloaded default properties, or in a set of overloaded properties.</span></span> <span data-ttu-id="565d4-104">Un'interfaccia può avere solo un metodo o una proprietà predefinita.</span><span class="sxs-lookup"><span data-stu-id="565d4-104">An interface can have only one default method or property.</span></span> <span data-ttu-id="565d4-105">Ne consegue che può ereditare un'interfaccia contenente un metodo o una proprietà predefinita oppure che il suo blocco di definizione può contenere un metodo o una proprietà contrassegnata come predefinita.</span><span class="sxs-lookup"><span data-stu-id="565d4-105">This means that it can either inherit an interface containing a default method or property, or its definition block can contain one method or property that is marked as default.</span></span>  
+# <a name="interface-interfacename-cannot-be-indexed-because-it-has-no-default-property"></a><span data-ttu-id="7f5cf-102">Impossibile indicizzare '\<interfacename>' perché non contiene proprietà predefinite</span><span class="sxs-lookup"><span data-stu-id="7f5cf-102">Interface '\<interfacename>' cannot be indexed because it has no default property</span></span>
+<span data-ttu-id="7f5cf-103">Le espressioni di indice devono risultare in un valore il cui tipo sia una matrice, possegga un set di proprietà predefinite in overload o in un set di proprietà in overload.</span><span class="sxs-lookup"><span data-stu-id="7f5cf-103">Index expressions must result in a value whose type is an array, in a value whose type has a set of overloaded default properties, or in a set of overloaded properties.</span></span> <span data-ttu-id="7f5cf-104">Un'interfaccia può avere solo un metodo o una proprietà predefinita.</span><span class="sxs-lookup"><span data-stu-id="7f5cf-104">An interface can have only one default method or property.</span></span> <span data-ttu-id="7f5cf-105">Ne consegue che può ereditare un'interfaccia contenente un metodo o una proprietà predefinita oppure che il suo blocco di definizione può contenere un metodo o una proprietà contrassegnata come predefinita.</span><span class="sxs-lookup"><span data-stu-id="7f5cf-105">This means that it can either inherit an interface containing a default method or property, or its definition block can contain one method or property that is marked as default.</span></span>  
   
- <span data-ttu-id="565d4-106">**ID errore:** BC30547</span><span class="sxs-lookup"><span data-stu-id="565d4-106">**Error ID:** BC30547</span></span>  
+ <span data-ttu-id="7f5cf-106">**ID errore:** BC30547</span><span class="sxs-lookup"><span data-stu-id="7f5cf-106">**Error ID:** BC30547</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="565d4-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="565d4-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7f5cf-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7f5cf-107">To correct this error</span></span>  
   
-- <span data-ttu-id="565d4-108">Fornire all'interfaccia una proprietà predefinita.</span><span class="sxs-lookup"><span data-stu-id="565d4-108">Supply a default property in the interface.</span></span>  
+- <span data-ttu-id="7f5cf-108">Fornire all'interfaccia una proprietà predefinita.</span><span class="sxs-lookup"><span data-stu-id="7f5cf-108">Supply a default property in the interface.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="565d4-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="565d4-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7f5cf-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7f5cf-109">See also</span></span>
 
-- [<span data-ttu-id="565d4-110">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="565d4-110">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="7f5cf-110">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="7f5cf-110">Interface Statement</span></span>](../language-reference/statements/interface-statement.md)
