--- a/docs/visual-basic/misc/bc30611.md
+++ b/docs/visual-basic/misc/bc30611.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30611
 ms.assetid: e310bd0d-f221-4b02-87f3-02124f4de87c
-ms.openlocfilehash: 8efefba6e76b15e9f74d524c11165e7e1f9d10c1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9654c95bad5938bd6be0aefd6ce85fb9dc797a3c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646816"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389794"
 ---
-# <a name="array-dimensions-cannot-have-a-negative-size"></a><span data-ttu-id="7ee03-102">Le dimensioni di una matrice non possono essere negative</span><span class="sxs-lookup"><span data-stu-id="7ee03-102">Array dimensions cannot have a negative size</span></span>
-<span data-ttu-id="7ee03-103">Uno o più limiti della matrice specificati corrispondono a un numero negativo.</span><span class="sxs-lookup"><span data-stu-id="7ee03-103">One or more of the array bounds specified is a negative number.</span></span> <span data-ttu-id="7ee03-104">È possibile specificare un indice negativo solo quando si usa un limite superiore di -1 per dichiarare una matrice vuota.</span><span class="sxs-lookup"><span data-stu-id="7ee03-104">You can specify a negative subscript only when you use an upper bound of -1 to declare an empty array.</span></span> <span data-ttu-id="7ee03-105">Una matrice di questo tipo ha zero elementi, ma non è `Nothing`.</span><span class="sxs-lookup"><span data-stu-id="7ee03-105">Such an array has zero elements, but it is not `Nothing`.</span></span>  
+# <a name="array-dimensions-cannot-have-a-negative-size"></a><span data-ttu-id="827dc-102">Le dimensioni di una matrice non possono essere negative</span><span class="sxs-lookup"><span data-stu-id="827dc-102">Array dimensions cannot have a negative size</span></span>
+<span data-ttu-id="827dc-103">Uno o più limiti della matrice specificati corrispondono a un numero negativo.</span><span class="sxs-lookup"><span data-stu-id="827dc-103">One or more of the array bounds specified is a negative number.</span></span> <span data-ttu-id="827dc-104">È possibile specificare un indice negativo solo quando si usa un limite superiore di -1 per dichiarare una matrice vuota.</span><span class="sxs-lookup"><span data-stu-id="827dc-104">You can specify a negative subscript only when you use an upper bound of -1 to declare an empty array.</span></span> <span data-ttu-id="827dc-105">Una matrice di questo tipo ha zero elementi, ma non è `Nothing`.</span><span class="sxs-lookup"><span data-stu-id="827dc-105">Such an array has zero elements, but it is not `Nothing`.</span></span>  
   
- <span data-ttu-id="7ee03-106">**ID errore:** BC30611</span><span class="sxs-lookup"><span data-stu-id="7ee03-106">**Error ID:** BC30611</span></span>  
+ <span data-ttu-id="827dc-106">**ID errore:** BC30611</span><span class="sxs-lookup"><span data-stu-id="827dc-106">**Error ID:** BC30611</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="7ee03-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7ee03-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="827dc-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="827dc-107">To correct this error</span></span>  
   
-- <span data-ttu-id="7ee03-108">Sostituire il limite di matrice negativo con un numero positivo.</span><span class="sxs-lookup"><span data-stu-id="7ee03-108">Replace the negative array bound with a positive number.</span></span>  
+- <span data-ttu-id="827dc-108">Sostituire il limite di matrice negativo con un numero positivo.</span><span class="sxs-lookup"><span data-stu-id="827dc-108">Replace the negative array bound with a positive number.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7ee03-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7ee03-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="827dc-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="827dc-109">See also</span></span>
 
-- [<span data-ttu-id="7ee03-110">Matrici</span><span class="sxs-lookup"><span data-stu-id="7ee03-110">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="827dc-110">Matrici</span><span class="sxs-lookup"><span data-stu-id="827dc-110">Arrays</span></span>](../programming-guide/language-features/arrays/index.md)
