--- a/docs/visual-basic/misc/bc30016.md
+++ b/docs/visual-basic/misc/bc30016.md
@@ -1,5 +1,5 @@
 ---
-title: Le etichette non sono valide all'esterno di espressioni lambda su più righe metodi
+title: Le etichette non sono valide all'esterno di metodi-espressioni lambda su più righe
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30016
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30016
 ms.assetid: 17d12a96-d759-4df9-882c-5e45c1d814a5
-ms.openlocfilehash: 6979d15f223fb7c8ef81d8a423f998541428eed9
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d1125f2541eb3e00f7f417af7c27651c36978745
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61770266"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366801"
 ---
-# <a name="labels-are-not-valid-outside-methodsmultiline-lambdas"></a><span data-ttu-id="e5cc7-102">Le etichette non sono valide all'esterno di metodi/espressioni lambda su più righe</span><span class="sxs-lookup"><span data-stu-id="e5cc7-102">Labels are not valid outside methods/multiline lambdas</span></span>
-<span data-ttu-id="e5cc7-103">È possibile aggiungere un'etichetta a un'istruzione solo in una routine `Sub`, `Function`, in a una proprietà `Get`o in una proprietà `Set` .</span><span class="sxs-lookup"><span data-stu-id="e5cc7-103">You can add a label to a statement only within a `Sub`, `Function`, property `Get`, or property `Set` procedure.</span></span> <span data-ttu-id="e5cc7-104">Solo un'istruzione eseguibile può avere un'etichetta e tutte le istruzioni eseguibili devono essere all'interno delle routine.</span><span class="sxs-lookup"><span data-stu-id="e5cc7-104">Only an executable statement can have a label, and all executable statements must be inside procedures.</span></span>  
+# <a name="labels-are-not-valid-outside-methodsmultiline-lambdas"></a><span data-ttu-id="7dfaf-102">Le etichette non sono valide all'esterno di metodi/espressioni lambda su più righe</span><span class="sxs-lookup"><span data-stu-id="7dfaf-102">Labels are not valid outside methods/multiline lambdas</span></span>
+<span data-ttu-id="7dfaf-103">È possibile aggiungere un'etichetta a un'istruzione solo in una routine `Sub`, `Function`, in a una proprietà `Get`o in una proprietà `Set` .</span><span class="sxs-lookup"><span data-stu-id="7dfaf-103">You can add a label to a statement only within a `Sub`, `Function`, property `Get`, or property `Set` procedure.</span></span> <span data-ttu-id="7dfaf-104">Solo un'istruzione eseguibile può avere un'etichetta e tutte le istruzioni eseguibili devono essere all'interno delle routine.</span><span class="sxs-lookup"><span data-stu-id="7dfaf-104">Only an executable statement can have a label, and all executable statements must be inside procedures.</span></span>  
   
- <span data-ttu-id="e5cc7-105">**ID errore:** BC30016</span><span class="sxs-lookup"><span data-stu-id="e5cc7-105">**Error ID:** BC30016</span></span>  
+ <span data-ttu-id="7dfaf-105">**ID errore:** BC30016</span><span class="sxs-lookup"><span data-stu-id="7dfaf-105">**Error ID:** BC30016</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e5cc7-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e5cc7-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7dfaf-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7dfaf-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="e5cc7-107">Rimuovere l'etichetta dell'istruzione o spostare l'istruzione all'interno di una routine.</span><span class="sxs-lookup"><span data-stu-id="e5cc7-107">Remove the label from the statement, or move the statement inside a procedure.</span></span>  
+1. <span data-ttu-id="7dfaf-107">Rimuovere l'etichetta dell'istruzione o spostare l'istruzione all'interno di una routine.</span><span class="sxs-lookup"><span data-stu-id="7dfaf-107">Remove the label from the statement, or move the statement inside a procedure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e5cc7-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e5cc7-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7dfaf-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7dfaf-108">See also</span></span>
 
-- [<span data-ttu-id="e5cc7-109">Procedura: etichettare le istruzioni</span><span class="sxs-lookup"><span data-stu-id="e5cc7-109">How to: Label Statements</span></span>](../../visual-basic/programming-guide/program-structure/how-to-label-statements.md)
-- [<span data-ttu-id="e5cc7-110">Istruzione Sub</span><span class="sxs-lookup"><span data-stu-id="e5cc7-110">Sub Statement</span></span>](../../visual-basic/language-reference/statements/sub-statement.md)
-- [<span data-ttu-id="e5cc7-111">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="e5cc7-111">Function Statement</span></span>](../../visual-basic/language-reference/statements/function-statement.md)
-- [<span data-ttu-id="e5cc7-112">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="e5cc7-112">Get Statement</span></span>](../../visual-basic/language-reference/statements/get-statement.md)
-- [<span data-ttu-id="e5cc7-113">Istruzione Set</span><span class="sxs-lookup"><span data-stu-id="e5cc7-113">Set Statement</span></span>](../../visual-basic/language-reference/statements/set-statement.md)
+- [<span data-ttu-id="7dfaf-109">Procedura: Etichettare le istruzioni</span><span class="sxs-lookup"><span data-stu-id="7dfaf-109">How to: Label Statements</span></span>](../programming-guide/program-structure/how-to-label-statements.md)
+- [<span data-ttu-id="7dfaf-110">Istruzione Sub</span><span class="sxs-lookup"><span data-stu-id="7dfaf-110">Sub Statement</span></span>](../language-reference/statements/sub-statement.md)
+- [<span data-ttu-id="7dfaf-111">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="7dfaf-111">Function Statement</span></span>](../language-reference/statements/function-statement.md)
+- [<span data-ttu-id="7dfaf-112">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="7dfaf-112">Get Statement</span></span>](../language-reference/statements/get-statement.md)
+- [<span data-ttu-id="7dfaf-113">Istruzione set</span><span class="sxs-lookup"><span data-stu-id="7dfaf-113">Set Statement</span></span>](../language-reference/statements/set-statement.md)
