--- a/docs/visual-basic/misc/bc30022.md
+++ b/docs/visual-basic/misc/bc30022.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30022
 ms.assetid: a22eff96-8c18-47c4-9ef0-f98b2ab8a5d8
-ms.openlocfilehash: 30c138914890412bab189cbe2407cd59a851ff4f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e93d017742fbd552f5b454ef2800bc5af5755233
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64584130"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366580"
 ---
-# <a name="properties-declared-readonly-cannot-have-a-set"></a><span data-ttu-id="0f6e7-102">Le proprietà dichiarate 'ReadOnly' non possono avere un elemento 'Set'</span><span class="sxs-lookup"><span data-stu-id="0f6e7-102">Properties declared 'ReadOnly' cannot have a 'Set'</span></span>
-<span data-ttu-id="0f6e7-103">La routine `Set` legge il valore di una proprietà.</span><span class="sxs-lookup"><span data-stu-id="0f6e7-103">The `Set` procedure writes the value of a property.</span></span> <span data-ttu-id="0f6e7-104">Le proprietà`ReadOnly` non possono essere dichiarate.</span><span class="sxs-lookup"><span data-stu-id="0f6e7-104">`ReadOnly` properties cannot be written.</span></span>  
+# <a name="properties-declared-readonly-cannot-have-a-set"></a><span data-ttu-id="80f9e-102">Le proprietà dichiarate 'ReadOnly' non possono avere un elemento 'Set'</span><span class="sxs-lookup"><span data-stu-id="80f9e-102">Properties declared 'ReadOnly' cannot have a 'Set'</span></span>
+<span data-ttu-id="80f9e-103">La routine `Set` legge il valore di una proprietà.</span><span class="sxs-lookup"><span data-stu-id="80f9e-103">The `Set` procedure writes the value of a property.</span></span> <span data-ttu-id="80f9e-104">Le proprietà`ReadOnly` non possono essere dichiarate.</span><span class="sxs-lookup"><span data-stu-id="80f9e-104">`ReadOnly` properties cannot be written.</span></span>  
   
- <span data-ttu-id="0f6e7-105">**ID errore:** BC30022</span><span class="sxs-lookup"><span data-stu-id="0f6e7-105">**Error ID:** BC30022</span></span>  
+ <span data-ttu-id="80f9e-105">**ID errore:** BC30022</span><span class="sxs-lookup"><span data-stu-id="80f9e-105">**Error ID:** BC30022</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0f6e7-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0f6e7-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="80f9e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="80f9e-106">To correct this error</span></span>  
   
-- <span data-ttu-id="0f6e7-107">Rimuovere la parola chiave `ReadOnly` dall'istruzione `Property` oppure la routine `Set` dal corpo della proprietà.</span><span class="sxs-lookup"><span data-stu-id="0f6e7-107">Remove the `ReadOnly` keyword from the `Property` statement, or remove the `Set` procedure from the property body.</span></span>  
+- <span data-ttu-id="80f9e-107">Rimuovere la parola chiave `ReadOnly` dall'istruzione `Property` oppure la routine `Set` dal corpo della proprietà.</span><span class="sxs-lookup"><span data-stu-id="80f9e-107">Remove the `ReadOnly` keyword from the `Property` statement, or remove the `Set` procedure from the property body.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0f6e7-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0f6e7-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="80f9e-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="80f9e-108">See also</span></span>
 
-- [<span data-ttu-id="0f6e7-109">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="0f6e7-109">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
-- [<span data-ttu-id="0f6e7-110">Istruzione Set</span><span class="sxs-lookup"><span data-stu-id="0f6e7-110">Set Statement</span></span>](../../visual-basic/language-reference/statements/set-statement.md)
-- [<span data-ttu-id="0f6e7-111">ReadOnly</span><span class="sxs-lookup"><span data-stu-id="0f6e7-111">ReadOnly</span></span>](../../visual-basic/language-reference/modifiers/readonly.md)
+- [<span data-ttu-id="80f9e-109">Property Statement</span><span class="sxs-lookup"><span data-stu-id="80f9e-109">Property Statement</span></span>](../language-reference/statements/property-statement.md)
+- [<span data-ttu-id="80f9e-110">Istruzione set</span><span class="sxs-lookup"><span data-stu-id="80f9e-110">Set Statement</span></span>](../language-reference/statements/set-statement.md)
+- [<span data-ttu-id="80f9e-111">ReadOnly</span><span class="sxs-lookup"><span data-stu-id="80f9e-111">ReadOnly</span></span>](../language-reference/modifiers/readonly.md)
