--- a/docs/visual-basic/misc/bc30050.md
+++ b/docs/visual-basic/misc/bc30050.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30050
 ms.assetid: da02aefe-950e-4289-89b3-48e10d0def1b
-ms.openlocfilehash: a6ef09baf91d4b5793dc26efb3331c8a61c616ac
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ab193fae1aec7f6c6ffaebe171afe6b0fa8a9544
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64649937"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391468"
 ---
-# <a name="paramarray-parameter-must-be-an-array"></a><span data-ttu-id="1828d-102">Il parametro ParamArray deve essere una matrice</span><span class="sxs-lookup"><span data-stu-id="1828d-102">ParamArray parameter must be an array</span></span>
-<span data-ttu-id="1828d-103">Un argomento `ParamArray` deve essere dichiarato come tipo di matrice unidimensionale.</span><span class="sxs-lookup"><span data-stu-id="1828d-103">A `ParamArray` argument must be declared as a one-dimensional array type.</span></span> <span data-ttu-id="1828d-104">La dichiarazione non include parentesi dopo il nome dell'argomento `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="1828d-104">The declaration does not include parentheses after the `ParamArray` argument name.</span></span>  
+# <a name="paramarray-parameter-must-be-an-array"></a><span data-ttu-id="a2fc9-102">Il parametro ParamArray deve essere una matrice</span><span class="sxs-lookup"><span data-stu-id="a2fc9-102">ParamArray parameter must be an array</span></span>
+<span data-ttu-id="a2fc9-103">Un argomento `ParamArray` deve essere dichiarato come tipo di matrice unidimensionale.</span><span class="sxs-lookup"><span data-stu-id="a2fc9-103">A `ParamArray` argument must be declared as a one-dimensional array type.</span></span> <span data-ttu-id="a2fc9-104">La dichiarazione non include parentesi dopo il nome dell'argomento `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="a2fc9-104">The declaration does not include parentheses after the `ParamArray` argument name.</span></span>  
   
- <span data-ttu-id="1828d-105">**ID errore:** BC30050</span><span class="sxs-lookup"><span data-stu-id="1828d-105">**Error ID:** BC30050</span></span>  
+ <span data-ttu-id="a2fc9-105">**ID errore:** BC30050</span><span class="sxs-lookup"><span data-stu-id="a2fc9-105">**Error ID:** BC30050</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1828d-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1828d-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a2fc9-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a2fc9-106">To correct this error</span></span>  
   
-- <span data-ttu-id="1828d-107">Aggiungere le parentesi dopo il nome dell'argomento `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="1828d-107">Add a pair of parentheses after the `ParamArray` argument name.</span></span>  
+- <span data-ttu-id="a2fc9-107">Aggiungere le parentesi dopo il nome dell'argomento `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="a2fc9-107">Add a pair of parentheses after the `ParamArray` argument name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1828d-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1828d-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a2fc9-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a2fc9-108">See also</span></span>
 
-- [<span data-ttu-id="1828d-109">Matrici di parametri</span><span class="sxs-lookup"><span data-stu-id="1828d-109">Parameter Arrays</span></span>](../../visual-basic/programming-guide/language-features/procedures/parameter-arrays.md)
-- [<span data-ttu-id="1828d-110">ParamArray</span><span class="sxs-lookup"><span data-stu-id="1828d-110">ParamArray</span></span>](../../visual-basic/language-reference/modifiers/paramarray.md)
-- [<span data-ttu-id="1828d-111">Matrici</span><span class="sxs-lookup"><span data-stu-id="1828d-111">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="a2fc9-109">Matrici di parametri</span><span class="sxs-lookup"><span data-stu-id="a2fc9-109">Parameter Arrays</span></span>](../programming-guide/language-features/procedures/parameter-arrays.md)
+- [<span data-ttu-id="a2fc9-110">ParamArray</span><span class="sxs-lookup"><span data-stu-id="a2fc9-110">ParamArray</span></span>](../language-reference/modifiers/paramarray.md)
+- [<span data-ttu-id="a2fc9-111">Matrici</span><span class="sxs-lookup"><span data-stu-id="a2fc9-111">Arrays</span></span>](../programming-guide/language-features/arrays/index.md)
