--- a/docs/visual-basic/misc/bc30052.md
+++ b/docs/visual-basic/misc/bc30052.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30052
 ms.assetid: 5ee0d2cb-14e2-4a0f-b758-f987a3f9eb73
-ms.openlocfilehash: 8f686c658c02536db097a079f5fafee191be1be5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 084cbff8b2be122b131e6da72ee707a0f36daf64
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64649921"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391367"
 ---
-# <a name="array-exceeds-the-limit-of-32-dimensions"></a><span data-ttu-id="f4553-102">La matrice supera il limite di 32 dimensioni</span><span class="sxs-lookup"><span data-stu-id="f4553-102">Array exceeds the limit of 32 dimensions</span></span>
-<span data-ttu-id="f4553-103">Una matrice non può avere più di 32 dimensioni.</span><span class="sxs-lookup"><span data-stu-id="f4553-103">Arrays cannot have more than 32 dimensions.</span></span>  
+# <a name="array-exceeds-the-limit-of-32-dimensions"></a><span data-ttu-id="508a5-102">La matrice supera il limite di 32 dimensioni</span><span class="sxs-lookup"><span data-stu-id="508a5-102">Array exceeds the limit of 32 dimensions</span></span>
+<span data-ttu-id="508a5-103">Una matrice non può avere più di 32 dimensioni.</span><span class="sxs-lookup"><span data-stu-id="508a5-103">Arrays cannot have more than 32 dimensions.</span></span>  
   
- <span data-ttu-id="f4553-104">**ID errore:** BC30052</span><span class="sxs-lookup"><span data-stu-id="f4553-104">**Error ID:** BC30052</span></span>  
+ <span data-ttu-id="508a5-104">**ID errore:** BC30052</span><span class="sxs-lookup"><span data-stu-id="508a5-104">**Error ID:** BC30052</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f4553-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f4553-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="508a5-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="508a5-105">To correct this error</span></span>  
   
-- <span data-ttu-id="f4553-106">Ridurre il numero di dimensioni nella dichiarazione della matrice.</span><span class="sxs-lookup"><span data-stu-id="f4553-106">Reduce the number of dimensions in the declaration of the array.</span></span>  
+- <span data-ttu-id="508a5-106">Ridurre il numero di dimensioni nella dichiarazione della matrice.</span><span class="sxs-lookup"><span data-stu-id="508a5-106">Reduce the number of dimensions in the declaration of the array.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f4553-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f4553-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="508a5-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="508a5-107">See also</span></span>
 
-- [<span data-ttu-id="f4553-108">Matrici</span><span class="sxs-lookup"><span data-stu-id="f4553-108">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="508a5-108">Matrici</span><span class="sxs-lookup"><span data-stu-id="508a5-108">Arrays</span></span>](../programming-guide/language-features/arrays/index.md)
