--- a/docs/visual-basic/misc/bc30057.md
+++ b/docs/visual-basic/misc/bc30057.md
@@ -1,5 +1,5 @@
 ---
-title: Troppi argomenti per '<procedurename>'
+title: Troppi argomenti per ' <procedurename> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30057
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30057
 ms.assetid: 1e0bd0e0-81c2-43cc-85bd-9f9d7c0d6a85
-ms.openlocfilehash: eaa15d2e63df4055eb15672dbab7f830a894558d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 99df1a507f1a0fe4ae1d7d60d7383f64523cca9d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64649918"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391375"
 ---
-# <a name="too-many-arguments-to-procedurename"></a><span data-ttu-id="0feb2-102">Troppi argomenti per '\<nomeroutine >'</span><span class="sxs-lookup"><span data-stu-id="0feb2-102">Too many arguments to '\<procedurename>'</span></span>
-<span data-ttu-id="0feb2-103">Il numero di argomenti forniti in una chiamata di routine supera il numero di argomenti definiti per la routine.</span><span class="sxs-lookup"><span data-stu-id="0feb2-103">The number of arguments supplied in a procedure call exceeds the number of arguments defined for the procedure.</span></span>  
+# <a name="too-many-arguments-to-procedurename"></a><span data-ttu-id="d2911-102">Troppi argomenti per ' \<procedurename> '</span><span class="sxs-lookup"><span data-stu-id="d2911-102">Too many arguments to '\<procedurename>'</span></span>
+<span data-ttu-id="d2911-103">Il numero di argomenti forniti in una chiamata di routine supera il numero di argomenti definiti per la routine.</span><span class="sxs-lookup"><span data-stu-id="d2911-103">The number of arguments supplied in a procedure call exceeds the number of arguments defined for the procedure.</span></span>  
   
- <span data-ttu-id="0feb2-104">**ID errore:** BC30057</span><span class="sxs-lookup"><span data-stu-id="0feb2-104">**Error ID:** BC30057</span></span>  
+ <span data-ttu-id="d2911-104">**ID errore:** BC30057</span><span class="sxs-lookup"><span data-stu-id="d2911-104">**Error ID:** BC30057</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0feb2-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0feb2-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d2911-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d2911-105">To correct this error</span></span>  
   
-- <span data-ttu-id="0feb2-106">Consultare la definizione della routine e rimuovere gli argomenti aggiuntivi dalla chiamata.</span><span class="sxs-lookup"><span data-stu-id="0feb2-106">Consult the definition of the procedure, and remove the extra arguments from the call.</span></span>  
+- <span data-ttu-id="d2911-106">Consultare la definizione della routine e rimuovere gli argomenti aggiuntivi dalla chiamata.</span><span class="sxs-lookup"><span data-stu-id="d2911-106">Consult the definition of the procedure, and remove the extra arguments from the call.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0feb2-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0feb2-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d2911-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d2911-107">See also</span></span>
 
-- [<span data-ttu-id="0feb2-108">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="0feb2-108">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [<span data-ttu-id="d2911-108">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="d2911-108">Procedure Parameters and Arguments</span></span>](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
