--- a/docs/visual-basic/misc/bc30062.md
+++ b/docs/visual-basic/misc/bc30062.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30062
 ms.assetid: 05350c30-f227-453f-a743-54fa4305b1f5
-ms.openlocfilehash: 7f38b3903258a24ba943bb0acdbfd81d29b437e8
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: b0e0704802da489d7d9a5b3aecbf97c42da02692
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660179"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391209"
 ---
-# <a name="me-cannot-be-the-target-of-an-assignment"></a><span data-ttu-id="e3ed9-102">'Me' non può essere la destinazione di un'assegnazione</span><span class="sxs-lookup"><span data-stu-id="e3ed9-102">'Me' cannot be the target of an assignment</span></span>
-<span data-ttu-id="e3ed9-103">La parola chiave `Me` fa sempre riferimento all'istanza specifica di una classe in cui è attualmente in esecuzione il codice.</span><span class="sxs-lookup"><span data-stu-id="e3ed9-103">The `Me` keyword always refers to the specific instance of a class where the code is currently executing.</span></span> <span data-ttu-id="e3ed9-104">Non è possibile modificarne il valore.</span><span class="sxs-lookup"><span data-stu-id="e3ed9-104">Its value cannot be changed.</span></span>  
+# <a name="me-cannot-be-the-target-of-an-assignment"></a><span data-ttu-id="ad494-102">'Me' non può essere la destinazione di un'assegnazione</span><span class="sxs-lookup"><span data-stu-id="ad494-102">'Me' cannot be the target of an assignment</span></span>
+<span data-ttu-id="ad494-103">La parola chiave `Me` fa sempre riferimento all'istanza specifica di una classe in cui è attualmente in esecuzione il codice.</span><span class="sxs-lookup"><span data-stu-id="ad494-103">The `Me` keyword always refers to the specific instance of a class where the code is currently executing.</span></span> <span data-ttu-id="ad494-104">Non è possibile modificarne il valore.</span><span class="sxs-lookup"><span data-stu-id="ad494-104">Its value cannot be changed.</span></span>  
   
- <span data-ttu-id="e3ed9-105">**ID errore:** BC30062</span><span class="sxs-lookup"><span data-stu-id="e3ed9-105">**Error ID:** BC30062</span></span>  
+ <span data-ttu-id="ad494-105">**ID errore:** BC30062</span><span class="sxs-lookup"><span data-stu-id="ad494-105">**Error ID:** BC30062</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e3ed9-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e3ed9-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ad494-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ad494-106">To correct this error</span></span>  
   
-- <span data-ttu-id="e3ed9-107">Rimuovere l'istruzione che assegna un valore a `Me`.</span><span class="sxs-lookup"><span data-stu-id="e3ed9-107">Remove the statement that assigns a value to `Me`.</span></span>  
+- <span data-ttu-id="ad494-107">Rimuovere l'istruzione che assegna un valore a `Me`.</span><span class="sxs-lookup"><span data-stu-id="ad494-107">Remove the statement that assigns a value to `Me`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e3ed9-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e3ed9-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ad494-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ad494-108">See also</span></span>
 
-- [<span data-ttu-id="e3ed9-109">Me</span><span class="sxs-lookup"><span data-stu-id="e3ed9-109">Me</span></span>](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me)
-- [<span data-ttu-id="e3ed9-110">Assegnazione di variabili oggetto</span><span class="sxs-lookup"><span data-stu-id="e3ed9-110">Object Variable Assignment</span></span>](../../visual-basic/programming-guide/language-features/variables/object-variable-assignment.md)
+- [<span data-ttu-id="ad494-109">Me stesso</span><span class="sxs-lookup"><span data-stu-id="ad494-109">Me</span></span>](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me)
+- [<span data-ttu-id="ad494-110">Assegnazione di variabili oggetto</span><span class="sxs-lookup"><span data-stu-id="ad494-110">Object Variable Assignment</span></span>](../programming-guide/language-features/variables/object-variable-assignment.md)
