--- a/docs/visual-basic/misc/bc30258.md
+++ b/docs/visual-basic/misc/bc30258.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30258
 ms.assetid: cc07e7cd-b4a9-41a4-b1ac-2ef28162a1dd
-ms.openlocfilehash: 39e5f2637c42f84830b7f0a015593ba49bfcd4bf
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c51032da1a3a1964ab4f7dcf47c784795b6083d2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664169"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391118"
 ---
-# <a name="classes-can-inherit-only-from-other-classes"></a><span data-ttu-id="7ca30-102">Le classi possono derivare solo da altre classi</span><span class="sxs-lookup"><span data-stu-id="7ca30-102">Classes can inherit only from other classes</span></span>
-<span data-ttu-id="7ca30-103">Un'istruzione `Inherits` specifica un tipo diverso da una classe come tipo di base.</span><span class="sxs-lookup"><span data-stu-id="7ca30-103">An `Inherits` statement specifies a type other than a class as its base type.</span></span>  
+# <a name="classes-can-inherit-only-from-other-classes"></a><span data-ttu-id="cc6f9-102">Le classi possono derivare solo da altre classi</span><span class="sxs-lookup"><span data-stu-id="cc6f9-102">Classes can inherit only from other classes</span></span>
+<span data-ttu-id="cc6f9-103">Un'istruzione `Inherits` specifica un tipo diverso da una classe come tipo di base.</span><span class="sxs-lookup"><span data-stu-id="cc6f9-103">An `Inherits` statement specifies a type other than a class as its base type.</span></span>  
   
- <span data-ttu-id="7ca30-104">**ID errore:** BC30258</span><span class="sxs-lookup"><span data-stu-id="7ca30-104">**Error ID:** BC30258</span></span>  
+ <span data-ttu-id="cc6f9-104">**ID errore:** BC30258</span><span class="sxs-lookup"><span data-stu-id="cc6f9-104">**Error ID:** BC30258</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="7ca30-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7ca30-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="cc6f9-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cc6f9-105">To correct this error</span></span>  
   
-- <span data-ttu-id="7ca30-106">Modificare il tipo di base in una classe già definita.</span><span class="sxs-lookup"><span data-stu-id="7ca30-106">Change the base type to a class that is already defined.</span></span>  
+- <span data-ttu-id="cc6f9-106">Modificare il tipo di base in una classe già definita.</span><span class="sxs-lookup"><span data-stu-id="cc6f9-106">Change the base type to a class that is already defined.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7ca30-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7ca30-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="cc6f9-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cc6f9-107">See also</span></span>
 
-- [<span data-ttu-id="7ca30-108">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="7ca30-108">Inheritance Basics</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="cc6f9-108">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="cc6f9-108">Inheritance Basics</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
