--- a/docs/visual-basic/misc/bc30266.md
+++ b/docs/visual-basic/misc/bc30266.md
@@ -1,5 +1,5 @@
 ---
-title: "'<declaration1>' non può eseguire<declaration2>l'override di '' perché hanno livelli di accesso diversi"
+title: "' <declaration1> ' non può eseguire l'override di ' <declaration2> ' perché hanno livelli di accesso diversi"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30266
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30266
 ms.assetid: c9c5c14e-876c-430d-ab98-5087c19efae7
-ms.openlocfilehash: fd81bf9c9e21b6e391b69377b69dab82da32351c
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: f94bb614bd0cf7010adc113be288c8921b6338c7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667437"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391040"
 ---
-# <a name="declaration1-cannot-override-declaration2-because-they-have-different-access-levels"></a><span data-ttu-id="00257-102">'\<dichiarazione1 >' non può eseguire\<l'override di ' dichiarazione2 >' perché hanno livelli di accesso diversi</span><span class="sxs-lookup"><span data-stu-id="00257-102">'\<declaration1>' cannot override '\<declaration2>' because they have different access levels</span></span>
-<span data-ttu-id="00257-103">Una dichiarazione di routine o proprietà tenta di eseguire l'override di un elemento ereditato con lo stesso nome, ma specifica un'accessibilità diversa rispetto all'elemento ereditato.</span><span class="sxs-lookup"><span data-stu-id="00257-103">A procedure or property declaration attempts to override an inherited element of the same name, but it specifies a different accessibility than the inherited element.</span></span> <span data-ttu-id="00257-104">L'accessibilità dell'elemento ereditato, ad esempio `Public` o `Private`, deve essere mantenuta nell'override.</span><span class="sxs-lookup"><span data-stu-id="00257-104">The inherited element's accessibility, such as `Public` or `Private`, must be preserved in overriding.</span></span>  
+# <a name="declaration1-cannot-override-declaration2-because-they-have-different-access-levels"></a><span data-ttu-id="641b2-102">' \<declaration1> ' non può eseguire l'override di ' \<declaration2> ' perché hanno livelli di accesso diversi</span><span class="sxs-lookup"><span data-stu-id="641b2-102">'\<declaration1>' cannot override '\<declaration2>' because they have different access levels</span></span>
+<span data-ttu-id="641b2-103">Una dichiarazione di routine o proprietà tenta di eseguire l'override di un elemento ereditato con lo stesso nome, ma specifica un'accessibilità diversa rispetto all'elemento ereditato.</span><span class="sxs-lookup"><span data-stu-id="641b2-103">A procedure or property declaration attempts to override an inherited element of the same name, but it specifies a different accessibility than the inherited element.</span></span> <span data-ttu-id="641b2-104">L'accessibilità dell'elemento ereditato, ad esempio `Public` o `Private`, deve essere mantenuta nell'override.</span><span class="sxs-lookup"><span data-stu-id="641b2-104">The inherited element's accessibility, such as `Public` or `Private`, must be preserved in overriding.</span></span>  
   
- <span data-ttu-id="00257-105">**ID errore:** BC30266</span><span class="sxs-lookup"><span data-stu-id="00257-105">**Error ID:** BC30266</span></span>  
+ <span data-ttu-id="641b2-105">**ID errore:** BC30266</span><span class="sxs-lookup"><span data-stu-id="641b2-105">**Error ID:** BC30266</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="00257-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="00257-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="641b2-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="641b2-106">To correct this error</span></span>  
   
-- <span data-ttu-id="00257-107">Modificare l'accessibilità dell'elemento che esegue l'override affinché corrisponda a quella dell'elemento ereditato.</span><span class="sxs-lookup"><span data-stu-id="00257-107">Change the accessibility of the overriding element to match that of the inherited element.</span></span>  
+- <span data-ttu-id="641b2-107">Modificare l'accessibilità dell'elemento che esegue l'override affinché corrisponda a quella dell'elemento ereditato.</span><span class="sxs-lookup"><span data-stu-id="641b2-107">Change the accessibility of the overriding element to match that of the inherited element.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="00257-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="00257-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="641b2-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="641b2-108">See also</span></span>
 
-- [<span data-ttu-id="00257-109">Override di proprietà e metodi nelle classi derivate</span><span class="sxs-lookup"><span data-stu-id="00257-109">Overriding properties and methods in derived classes</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
-- [<span data-ttu-id="00257-110">Livelli di accesso in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="00257-110">Access levels in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md)
+- [<span data-ttu-id="641b2-109">Override di proprietà e metodi nelle classi derivate</span><span class="sxs-lookup"><span data-stu-id="641b2-109">Overriding properties and methods in derived classes</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+- [<span data-ttu-id="641b2-110">Livelli di accesso in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="641b2-110">Access levels in Visual Basic</span></span>](../programming-guide/language-features/declared-elements/access-levels.md)
