--- a/docs/visual-basic/misc/bc30290.md
+++ b/docs/visual-basic/misc/bc30290.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30290
 ms.assetid: 34c38cff-fb9c-406d-82e8-ca251ee77104
-ms.openlocfilehash: 82270062a129acd7e6c31cfde110228e0c01fd91
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c54cc76e1b86de513e52c31e1d11536b0f1ca4f5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663997"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390565"
 ---
-# <a name="local-variable-cannot-have-the-same-name-as-the-function-containing-it"></a><span data-ttu-id="4bc66-102">La variabile locale non può avere lo stesso nome della funzione in cui è contenuta</span><span class="sxs-lookup"><span data-stu-id="4bc66-102">Local variable cannot have the same name as the function containing it</span></span>
-<span data-ttu-id="4bc66-103">Un'istruzione `Dim` specifica una variabile con lo stesso nome della routine `Function` in cui è contenuta.</span><span class="sxs-lookup"><span data-stu-id="4bc66-103">A `Dim` statement specifies a variable with the same name as the `Function` procedure containing it.</span></span>  
+# <a name="local-variable-cannot-have-the-same-name-as-the-function-containing-it"></a><span data-ttu-id="166db-102">La variabile locale non può avere lo stesso nome della funzione in cui è contenuta</span><span class="sxs-lookup"><span data-stu-id="166db-102">Local variable cannot have the same name as the function containing it</span></span>
+<span data-ttu-id="166db-103">Un'istruzione `Dim` specifica una variabile con lo stesso nome della routine `Function` in cui è contenuta.</span><span class="sxs-lookup"><span data-stu-id="166db-103">A `Dim` statement specifies a variable with the same name as the `Function` procedure containing it.</span></span>  
   
- <span data-ttu-id="4bc66-104">**ID errore:** BC30290</span><span class="sxs-lookup"><span data-stu-id="4bc66-104">**Error ID:** BC30290</span></span>  
+ <span data-ttu-id="166db-104">**ID errore:** BC30290</span><span class="sxs-lookup"><span data-stu-id="166db-104">**Error ID:** BC30290</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4bc66-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4bc66-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="166db-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="166db-105">To correct this error</span></span>  
   
-- <span data-ttu-id="4bc66-106">Rimuovere la dichiarazione di variabile oppure cambiare il nome della variabile.</span><span class="sxs-lookup"><span data-stu-id="4bc66-106">Remove the variable declaration, or change the name of the variable.</span></span>  
+- <span data-ttu-id="166db-106">Rimuovere la dichiarazione di variabile oppure cambiare il nome della variabile.</span><span class="sxs-lookup"><span data-stu-id="166db-106">Remove the variable declaration, or change the name of the variable.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4bc66-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4bc66-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="166db-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="166db-107">See also</span></span>
 
-- [<span data-ttu-id="4bc66-108">Routine Function</span><span class="sxs-lookup"><span data-stu-id="4bc66-108">Function Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
+- [<span data-ttu-id="166db-108">Routine Function</span><span class="sxs-lookup"><span data-stu-id="166db-108">Function Procedures</span></span>](../programming-guide/language-features/procedures/function-procedures.md)
