--- a/docs/visual-basic/misc/bc30550.md
+++ b/docs/visual-basic/misc/bc30550.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30550
 ms.assetid: 982a767d-9174-408e-bdcf-ae0d96f88cef
-ms.openlocfilehash: 0845e2bc4e1afa5a8badfa3ceee16ae0bc2233cc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 660f7b915d252512a5da5c36bc6c85ced5d9cad8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625230"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390240"
 ---
-# <a name="constructors-cannot-implement-interface-methods"></a><span data-ttu-id="4847d-102">I costruttori non possono implementare i metodi di interfaccia</span><span class="sxs-lookup"><span data-stu-id="4847d-102">Constructors cannot implement interface methods</span></span>
-<span data-ttu-id="4847d-103">Si è provato a usare la parola chiave `New` per implementare un metodo di interfaccia. Questa operazione non è valida.</span><span class="sxs-lookup"><span data-stu-id="4847d-103">You have attempted to use the `New` keyword to implement an interface method, which is not valid.</span></span>  
+# <a name="constructors-cannot-implement-interface-methods"></a><span data-ttu-id="48b52-102">I costruttori non possono implementare i metodi di interfaccia</span><span class="sxs-lookup"><span data-stu-id="48b52-102">Constructors cannot implement interface methods</span></span>
+<span data-ttu-id="48b52-103">Si è provato a usare la parola chiave `New` per implementare un metodo di interfaccia. Questa operazione non è valida.</span><span class="sxs-lookup"><span data-stu-id="48b52-103">You have attempted to use the `New` keyword to implement an interface method, which is not valid.</span></span>  
   
- <span data-ttu-id="4847d-104">**ID errore:** BC30550</span><span class="sxs-lookup"><span data-stu-id="4847d-104">**Error ID:** BC30550</span></span>  
+ <span data-ttu-id="48b52-104">**ID errore:** BC30550</span><span class="sxs-lookup"><span data-stu-id="48b52-104">**Error ID:** BC30550</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4847d-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4847d-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="48b52-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="48b52-105">To correct this error</span></span>  
   
-- <span data-ttu-id="4847d-106">Implementare le interfacce con la parola chiave `Implements` .</span><span class="sxs-lookup"><span data-stu-id="4847d-106">Implement interfaces with the `Implements` keyword.</span></span>  
+- <span data-ttu-id="48b52-106">Implementare le interfacce con la parola chiave `Implements` .</span><span class="sxs-lookup"><span data-stu-id="48b52-106">Implement interfaces with the `Implements` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4847d-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4847d-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="48b52-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="48b52-107">See also</span></span>
 
-- [<span data-ttu-id="4847d-108">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="4847d-108">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+- [<span data-ttu-id="48b52-108">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="48b52-108">Implements Statement</span></span>](../language-reference/statements/implements-statement.md)
