--- a/docs/visual-basic/misc/bc30555.md
+++ b/docs/visual-basic/misc/bc30555.md
@@ -1,5 +1,5 @@
 ---
-title: Membro predefinito '<membername>' non è una proprietà
+title: Il membro predefinito '<membername>' non è una proprietà
 ms.date: 07/20/2015
 f1_keywords:
 - bc30555
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30555
 ms.assetid: 4ee6a63e-22ab-4a99-8c4c-db0d4933f026
-ms.openlocfilehash: 9403f3b9a03db3ab170d9f551720cfda6f9dd9ee
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 07f2145617201a1970acd47cd10d5925862fee9f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625183"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390149"
 ---
-# <a name="default-member-membername-is-not-a-property"></a><span data-ttu-id="8d59b-102">Membro predefinito '\<nomeMembro >' non è una proprietà</span><span class="sxs-lookup"><span data-stu-id="8d59b-102">Default member '\<membername>' is not a property</span></span>
-<span data-ttu-id="8d59b-103">Si è provato a dichiarare un membro `Default`.</span><span class="sxs-lookup"><span data-stu-id="8d59b-103">You have tried to declare a member `Default`.</span></span> <span data-ttu-id="8d59b-104">Tuttavia, la parola chiave `Default` viene usata per identificare le proprietà predefinite.</span><span class="sxs-lookup"><span data-stu-id="8d59b-104">However, the `Default` keyword is used to identify default properties.</span></span>  
+# <a name="default-member-membername-is-not-a-property"></a><span data-ttu-id="c5e49-102">Il membro predefinito '\<membername>' non è una proprietà</span><span class="sxs-lookup"><span data-stu-id="c5e49-102">Default member '\<membername>' is not a property</span></span>
+<span data-ttu-id="c5e49-103">Si è provato a dichiarare un membro `Default`.</span><span class="sxs-lookup"><span data-stu-id="c5e49-103">You have tried to declare a member `Default`.</span></span> <span data-ttu-id="c5e49-104">Tuttavia, la parola chiave `Default` viene usata per identificare le proprietà predefinite.</span><span class="sxs-lookup"><span data-stu-id="c5e49-104">However, the `Default` keyword is used to identify default properties.</span></span>  
   
- <span data-ttu-id="8d59b-105">**ID errore:** BC30555</span><span class="sxs-lookup"><span data-stu-id="8d59b-105">**Error ID:** BC30555</span></span>  
+ <span data-ttu-id="c5e49-105">**ID errore:** BC30555</span><span class="sxs-lookup"><span data-stu-id="c5e49-105">**Error ID:** BC30555</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8d59b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8d59b-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c5e49-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c5e49-106">To correct this error</span></span>  
   
-- <span data-ttu-id="8d59b-107">Verificare che si stia identificando una proprietà con `Default`, oppure rimuovere la parola chiave `Default` .</span><span class="sxs-lookup"><span data-stu-id="8d59b-107">Check to make sure you are identifying a property with `Default`, or else remove the `Default` keyword.</span></span>  
+- <span data-ttu-id="c5e49-107">Verificare che si stia identificando una proprietà con `Default`, oppure rimuovere la parola chiave `Default` .</span><span class="sxs-lookup"><span data-stu-id="c5e49-107">Check to make sure you are identifying a property with `Default`, or else remove the `Default` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8d59b-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8d59b-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c5e49-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c5e49-108">See also</span></span>
 
-- [<span data-ttu-id="8d59b-109">Default</span><span class="sxs-lookup"><span data-stu-id="8d59b-109">Default</span></span>](../../visual-basic/language-reference/modifiers/default.md)
+- [<span data-ttu-id="c5e49-109">Default</span><span class="sxs-lookup"><span data-stu-id="c5e49-109">Default</span></span>](../language-reference/modifiers/default.md)
