--- a/docs/visual-basic/misc/bc30603.md
+++ b/docs/visual-basic/misc/bc30603.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30603
 ms.assetid: 3aef29d6-eadf-4f1f-b214-dfeae5e51c4f
-ms.openlocfilehash: b19f210e0d9096bfd88953c8f3436f4fa94ba8b9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 8a56ff6aba8ec7d98d315974bd4f0cf7cabb8692
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621262"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389967"
 ---
-# <a name="statement-cannot-appear-within-an-interface-body"></a><span data-ttu-id="5d21a-102">L'istruzione non può trovarsi all'interno di un corpo di interfaccia</span><span class="sxs-lookup"><span data-stu-id="5d21a-102">Statement cannot appear within an interface body</span></span>
-<span data-ttu-id="5d21a-103">La dichiarazione di un membro di interfaccia include un'istruzione di terminazione del membro, nel formato `End`*nomemembro*.</span><span class="sxs-lookup"><span data-stu-id="5d21a-103">The declaration of an interface member includes a statement terminating the member, of the form `End`*membername*.</span></span>  
+# <a name="statement-cannot-appear-within-an-interface-body"></a><span data-ttu-id="fd00e-102">L'istruzione non può trovarsi all'interno di un corpo di interfaccia</span><span class="sxs-lookup"><span data-stu-id="fd00e-102">Statement cannot appear within an interface body</span></span>
+<span data-ttu-id="fd00e-103">La dichiarazione di un membro di interfaccia include un'istruzione di terminazione del membro, nel formato `End`*nomemembro*.</span><span class="sxs-lookup"><span data-stu-id="fd00e-103">The declaration of an interface member includes a statement terminating the member, of the form `End`*membername*.</span></span>  
   
- <span data-ttu-id="5d21a-104">Un'interfaccia definisce solo la firma dei suoi membri.</span><span class="sxs-lookup"><span data-stu-id="5d21a-104">An interface defines only the signature of its members.</span></span> <span data-ttu-id="5d21a-105">Di conseguenza, le routine e le proprietà definite in un'interfaccia hanno solo la riga iniziale, che specifica il nome e la firma.</span><span class="sxs-lookup"><span data-stu-id="5d21a-105">Consequently, procedures and properties defined in an interface have only their initial line, specifying the name and signature.</span></span> <span data-ttu-id="5d21a-106">Non includere codice, dichiarazioni interne o un'istruzione `End Function`, `End Property`o `End Sub` all'interno dell'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="5d21a-106">You do not include any code, internal declarations, or an `End Function`, `End Property`, or `End Sub` statement inside the interface.</span></span>  
+ <span data-ttu-id="fd00e-104">Un'interfaccia definisce solo la firma dei suoi membri.</span><span class="sxs-lookup"><span data-stu-id="fd00e-104">An interface defines only the signature of its members.</span></span> <span data-ttu-id="fd00e-105">Di conseguenza, le routine e le proprietà definite in un'interfaccia hanno solo la riga iniziale, che specifica il nome e la firma.</span><span class="sxs-lookup"><span data-stu-id="fd00e-105">Consequently, procedures and properties defined in an interface have only their initial line, specifying the name and signature.</span></span> <span data-ttu-id="fd00e-106">Non includere codice, dichiarazioni interne o un'istruzione `End Function`, `End Property`o `End Sub` all'interno dell'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="fd00e-106">You do not include any code, internal declarations, or an `End Function`, `End Property`, or `End Sub` statement inside the interface.</span></span>  
   
- <span data-ttu-id="5d21a-107">**ID errore:** BC30603</span><span class="sxs-lookup"><span data-stu-id="5d21a-107">**Error ID:** BC30603</span></span>  
+ <span data-ttu-id="fd00e-107">**ID errore:** BC30603</span><span class="sxs-lookup"><span data-stu-id="fd00e-107">**Error ID:** BC30603</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5d21a-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5d21a-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fd00e-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fd00e-108">To correct this error</span></span>  
   
-- <span data-ttu-id="5d21a-109">Rimuovere l'istruzione `End`*nomemembro* dalla definizione dell'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="5d21a-109">Remove the `End`*membername* statement from the interface definition.</span></span>  
+- <span data-ttu-id="fd00e-109">Rimuovere l'istruzione `End`*nomemembro* dalla definizione dell'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="fd00e-109">Remove the `End`*membername* statement from the interface definition.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5d21a-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5d21a-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="fd00e-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fd00e-110">See also</span></span>
 
-- [<span data-ttu-id="5d21a-111">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="5d21a-111">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
-- [<span data-ttu-id="5d21a-112">Fine \<parola chiave > istruzione</span><span class="sxs-lookup"><span data-stu-id="5d21a-112">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+- [<span data-ttu-id="fd00e-111">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="fd00e-111">Interface Statement</span></span>](../language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="fd00e-112">\<keyword>Istruzione End</span><span class="sxs-lookup"><span data-stu-id="fd00e-112">End \<keyword> Statement</span></span>](../language-reference/statements/end-keyword-statement.md)
