--- a/docs/visual-basic/misc/bc30615.md
+++ b/docs/visual-basic/misc/bc30615.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30615
 ms.assetid: c8606b17-b50b-4014-b76e-b748d57e9389
-ms.openlocfilehash: de05cd88729ccfb2844fcfc983d6cd01cbc48ed2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 21746f2fe401e0f418292c3eaf56e0171ca27c1a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646800"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389720"
 ---
-# <a name="end-statement-cannot-be-used-in-class-library-projects"></a><span data-ttu-id="53332-102">L'istruzione 'End' non può essere usata nei progetti di tipo libreria di classi</span><span class="sxs-lookup"><span data-stu-id="53332-102">'End' statement cannot be used in class library projects</span></span>
-<span data-ttu-id="53332-103">I progetti di tipo libreria di classi usati per creare DLL non consentono di usare la parola chiave `End` per arrestare l'esecuzione di codice in una routine.</span><span class="sxs-lookup"><span data-stu-id="53332-103">Class library projects used to create DLLs do not allow the use of the `End` keyword to stop the execution of code in a procedure.</span></span>  
+# <a name="end-statement-cannot-be-used-in-class-library-projects"></a><span data-ttu-id="7cf6a-102">L'istruzione 'End' non può essere usata nei progetti di tipo libreria di classi</span><span class="sxs-lookup"><span data-stu-id="7cf6a-102">'End' statement cannot be used in class library projects</span></span>
+<span data-ttu-id="7cf6a-103">I progetti di tipo libreria di classi usati per creare DLL non consentono di usare la parola chiave `End` per arrestare l'esecuzione di codice in una routine.</span><span class="sxs-lookup"><span data-stu-id="7cf6a-103">Class library projects used to create DLLs do not allow the use of the `End` keyword to stop the execution of code in a procedure.</span></span>  
   
- <span data-ttu-id="53332-104">**ID errore:** BC30615</span><span class="sxs-lookup"><span data-stu-id="53332-104">**Error ID:** BC30615</span></span>  
+ <span data-ttu-id="7cf6a-104">**ID errore:** BC30615</span><span class="sxs-lookup"><span data-stu-id="7cf6a-104">**Error ID:** BC30615</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="53332-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="53332-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7cf6a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7cf6a-105">To correct this error</span></span>  
   
-- <span data-ttu-id="53332-106">Usare strutture di controllo quali `While` e `For` per controllare il flusso dell'esecuzione del programma.</span><span class="sxs-lookup"><span data-stu-id="53332-106">Use control structures such as `While` and `For` to control the flow of program execution.</span></span>  
+- <span data-ttu-id="7cf6a-106">Usare strutture di controllo quali `While` e `For` per controllare il flusso dell'esecuzione del programma.</span><span class="sxs-lookup"><span data-stu-id="7cf6a-106">Use control structures such as `While` and `For` to control the flow of program execution.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="53332-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="53332-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7cf6a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7cf6a-107">See also</span></span>
 
-- [<span data-ttu-id="53332-108">Flusso di controllo</span><span class="sxs-lookup"><span data-stu-id="53332-108">Control Flow</span></span>](../../visual-basic/programming-guide/language-features/control-flow/index.md)
+- [<span data-ttu-id="7cf6a-108">Flusso di controllo</span><span class="sxs-lookup"><span data-stu-id="7cf6a-108">Control Flow</span></span>](../programming-guide/language-features/control-flow/index.md)
