--- a/docs/visual-basic/misc/bc30752.md
+++ b/docs/visual-basic/misc/bc30752.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30752
 ms.assetid: 5c726627-b0fc-4edf-bd29-a83a0009f44d
-ms.openlocfilehash: 586426f8c8fdef5ed6acdb940e7b70516dd9d806
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: ea9a2f2f32f49aa0c14e498584f03f51b900860a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61937293"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412572"
 ---
-# <a name="on-error-statements-are-not-valid-within-synclock-statements"></a><span data-ttu-id="cc17f-102">Le istruzioni 'On Error' non sono valide nelle istruzioni 'SyncLock'</span><span class="sxs-lookup"><span data-stu-id="cc17f-102">'On Error' statements are not valid within 'SyncLock' statements</span></span>
-<span data-ttu-id="cc17f-103">Le istruzioni`On Error` non possono essere usate nei blocchi `SyncLock` perché interromperebbero la sincronizzazione dei thread.</span><span class="sxs-lookup"><span data-stu-id="cc17f-103">`On Error` statements are cannot be used in `SyncLock` blocks because they would disrupt thread synchronization.</span></span>  
+# <a name="on-error-statements-are-not-valid-within-synclock-statements"></a><span data-ttu-id="3d2d2-102">Le istruzioni 'On Error' non sono valide nelle istruzioni 'SyncLock'</span><span class="sxs-lookup"><span data-stu-id="3d2d2-102">'On Error' statements are not valid within 'SyncLock' statements</span></span>
+<span data-ttu-id="3d2d2-103">Le istruzioni`On Error` non possono essere usate nei blocchi `SyncLock` perché interromperebbero la sincronizzazione dei thread.</span><span class="sxs-lookup"><span data-stu-id="3d2d2-103">`On Error` statements are cannot be used in `SyncLock` blocks because they would disrupt thread synchronization.</span></span>  
   
- <span data-ttu-id="cc17f-104">**ID errore:** BC30752</span><span class="sxs-lookup"><span data-stu-id="cc17f-104">**Error ID:** BC30752</span></span>  
+ <span data-ttu-id="3d2d2-104">**ID errore:** BC30752</span><span class="sxs-lookup"><span data-stu-id="3d2d2-104">**Error ID:** BC30752</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="cc17f-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cc17f-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3d2d2-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3d2d2-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="cc17f-106">Inserire le istruzioni `On Error` al di fuori dei blocchi `SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="cc17f-106">Place `On Error` statements outside `SyncLock` blocks.</span></span>  
+1. <span data-ttu-id="3d2d2-106">Inserire le istruzioni `On Error` al di fuori dei blocchi `SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="3d2d2-106">Place `On Error` statements outside `SyncLock` blocks.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="cc17f-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cc17f-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="3d2d2-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3d2d2-107">See also</span></span>
 
-- [<span data-ttu-id="cc17f-108">Istruzione On Error</span><span class="sxs-lookup"><span data-stu-id="cc17f-108">On Error Statement</span></span>](../../visual-basic/language-reference/statements/on-error-statement.md)
+- [<span data-ttu-id="3d2d2-108">Istruzione On Error</span><span class="sxs-lookup"><span data-stu-id="3d2d2-108">On Error Statement</span></span>](../language-reference/statements/on-error-statement.md)
