--- a/docs/visual-basic/misc/bc30782.md
+++ b/docs/visual-basic/misc/bc30782.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30782
 ms.assetid: c6b35e63-4d84-449d-9685-41a1bc0a7f35
-ms.openlocfilehash: 63aaf29d36e95aa2295d704a996c61b9bd87acd2
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 0d2cc91992953acda33d465256f88a7454aa2693
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61755220"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389694"
 ---
-# <a name="continue-do-can-only-appear-inside-a-do-statement"></a><span data-ttu-id="ebd02-102">Continue Do' può essere specificato solo all'interno di un'istruzione 'Do'</span><span class="sxs-lookup"><span data-stu-id="ebd02-102">'Continue Do' can only appear inside a 'Do' statement</span></span>
-<span data-ttu-id="ebd02-103">Un'istruzione `Continue Do` può trovarsi solo all'interno di un ciclo `Do...Loop` .</span><span class="sxs-lookup"><span data-stu-id="ebd02-103">A `Continue Do` statement can only appear within a `Do...Loop` loop.</span></span>  
+# <a name="continue-do-can-only-appear-inside-a-do-statement"></a><span data-ttu-id="42f37-102">Continue Do' può essere specificato solo all'interno di un'istruzione 'Do'</span><span class="sxs-lookup"><span data-stu-id="42f37-102">'Continue Do' can only appear inside a 'Do' statement</span></span>
+<span data-ttu-id="42f37-103">Un'istruzione `Continue Do` può trovarsi solo all'interno di un ciclo `Do...Loop` .</span><span class="sxs-lookup"><span data-stu-id="42f37-103">A `Continue Do` statement can only appear within a `Do...Loop` loop.</span></span>  
   
- <span data-ttu-id="ebd02-104">**ID errore:** BC30782</span><span class="sxs-lookup"><span data-stu-id="ebd02-104">**Error ID:** BC30782</span></span>  
+ <span data-ttu-id="42f37-104">**ID errore:** BC30782</span><span class="sxs-lookup"><span data-stu-id="42f37-104">**Error ID:** BC30782</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ebd02-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ebd02-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="42f37-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="42f37-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="ebd02-106">Se l'istruzione `Continue Do` si trova in un ciclo `For...Next` , modificare l'istruzione in `Continue For`.</span><span class="sxs-lookup"><span data-stu-id="ebd02-106">If the `Continue Do` statement is in a `For...Next` loop, change the statement to `Continue For`.</span></span>  
+1. <span data-ttu-id="42f37-106">Se l'istruzione `Continue Do` si trova in un ciclo `For...Next` , modificare l'istruzione in `Continue For`.</span><span class="sxs-lookup"><span data-stu-id="42f37-106">If the `Continue Do` statement is in a `For...Next` loop, change the statement to `Continue For`.</span></span>  
   
-2. <span data-ttu-id="ebd02-107">Se l'istruzione `Continue Do` si trova in un ciclo `While...End While` , modificare l'istruzione in `Continue While`.</span><span class="sxs-lookup"><span data-stu-id="ebd02-107">If the `Continue Do` statement is in a `While...End While` loop, change the statement to `Continue While`.</span></span>  
+2. <span data-ttu-id="42f37-107">Se l'istruzione `Continue Do` si trova in un ciclo `While...End While` , modificare l'istruzione in `Continue While`.</span><span class="sxs-lookup"><span data-stu-id="42f37-107">If the `Continue Do` statement is in a `While...End While` loop, change the statement to `Continue While`.</span></span>  
   
-3. <span data-ttu-id="ebd02-108">In caso contrario, rimuovere l'istruzione `Continue Do` .</span><span class="sxs-lookup"><span data-stu-id="ebd02-108">Otherwise, remove the `Continue Do` statement.</span></span>  
+3. <span data-ttu-id="42f37-108">In caso contrario, rimuovere l'istruzione `Continue Do` .</span><span class="sxs-lookup"><span data-stu-id="42f37-108">Otherwise, remove the `Continue Do` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ebd02-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ebd02-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="42f37-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="42f37-109">See also</span></span>
 
-- [<span data-ttu-id="ebd02-110">Istruzione Continue</span><span class="sxs-lookup"><span data-stu-id="ebd02-110">Continue Statement</span></span>](../../visual-basic/language-reference/statements/continue-statement.md)
-- [<span data-ttu-id="ebd02-111">Istruzione Do...Loop</span><span class="sxs-lookup"><span data-stu-id="ebd02-111">Do...Loop Statement</span></span>](../../visual-basic/language-reference/statements/do-loop-statement.md)
+- [<span data-ttu-id="42f37-110">Istruzione continue</span><span class="sxs-lookup"><span data-stu-id="42f37-110">Continue Statement</span></span>](../language-reference/statements/continue-statement.md)
+- [<span data-ttu-id="42f37-111">Istruzione Do...Loop</span><span class="sxs-lookup"><span data-stu-id="42f37-111">Do...Loop Statement</span></span>](../language-reference/statements/do-loop-statement.md)
