--- a/docs/visual-basic/misc/bc30783.md
+++ b/docs/visual-basic/misc/bc30783.md
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC30783
 ms.assetid: 70891018-27c8-4d36-b168-8cc7177d70cb
-ms.openlocfilehash: 50f74e230f45ba30f085f1b5cacba8069829739d
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: baf895bd10760c2fd728e3e036d646563d15f1e4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62028408"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389553"
 ---
-# <a name="continue-for-can-only-appear-inside-a-for-statement"></a><span data-ttu-id="c3c4d-102">'Continue For' può trovarsi solo all'interno di un'istruzione 'For'</span><span class="sxs-lookup"><span data-stu-id="c3c4d-102">'Continue For' can only appear inside a 'For' statement</span></span>
-<span data-ttu-id="c3c4d-103">Un'istruzione `Continue For` può trovarsi solo all'interno di un ciclo `For...Next` .</span><span class="sxs-lookup"><span data-stu-id="c3c4d-103">A `Continue For` statement can only appear within a `For...Next` loop.</span></span>  
+# <a name="continue-for-can-only-appear-inside-a-for-statement"></a><span data-ttu-id="0c9f8-102">'Continue For' può trovarsi solo all'interno di un'istruzione 'For'</span><span class="sxs-lookup"><span data-stu-id="0c9f8-102">'Continue For' can only appear inside a 'For' statement</span></span>
+<span data-ttu-id="0c9f8-103">Un'istruzione `Continue For` può trovarsi solo all'interno di un ciclo `For...Next` .</span><span class="sxs-lookup"><span data-stu-id="0c9f8-103">A `Continue For` statement can only appear within a `For...Next` loop.</span></span>  
   
- <span data-ttu-id="c3c4d-104">**ID errore:** BC30783</span><span class="sxs-lookup"><span data-stu-id="c3c4d-104">**Error ID:** BC30783</span></span>  
+ <span data-ttu-id="0c9f8-104">**ID errore:** BC30783</span><span class="sxs-lookup"><span data-stu-id="0c9f8-104">**Error ID:** BC30783</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c3c4d-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c3c4d-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0c9f8-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0c9f8-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="c3c4d-106">Se l'istruzione `Continue For` si trova in `Do...Loop`modificare l'istruzione in `Continue Do`.</span><span class="sxs-lookup"><span data-stu-id="c3c4d-106">If the `Continue For` statement is in a `Do...Loop`, change the statement to `Continue Do`.</span></span>  
+1. <span data-ttu-id="0c9f8-106">Se l'istruzione `Continue For` si trova in `Do...Loop`modificare l'istruzione in `Continue Do`.</span><span class="sxs-lookup"><span data-stu-id="0c9f8-106">If the `Continue For` statement is in a `Do...Loop`, change the statement to `Continue Do`.</span></span>  
   
-     <span data-ttu-id="c3c4d-107">-oppure-</span><span class="sxs-lookup"><span data-stu-id="c3c4d-107">—or—</span></span>  
+     <span data-ttu-id="0c9f8-107">-oppure-</span><span class="sxs-lookup"><span data-stu-id="0c9f8-107">—or—</span></span>  
   
-     <span data-ttu-id="c3c4d-108">Se l'istruzione `Continue For` si trova in un ciclo `While...End While` , modificare l'istruzione in `Continue While`.</span><span class="sxs-lookup"><span data-stu-id="c3c4d-108">If the `Continue For` statement is in a `While...End While` loop, change the statement to `Continue While`.</span></span>  
+     <span data-ttu-id="0c9f8-108">Se l'istruzione `Continue For` si trova in un ciclo `While...End While` , modificare l'istruzione in `Continue While`.</span><span class="sxs-lookup"><span data-stu-id="0c9f8-108">If the `Continue For` statement is in a `While...End While` loop, change the statement to `Continue While`.</span></span>  
   
-2. <span data-ttu-id="c3c4d-109">In caso contrario, rimuovere l'istruzione `Continue For` .</span><span class="sxs-lookup"><span data-stu-id="c3c4d-109">Otherwise, remove the `Continue For` statement.</span></span>  
+2. <span data-ttu-id="0c9f8-109">In caso contrario, rimuovere l'istruzione `Continue For` .</span><span class="sxs-lookup"><span data-stu-id="0c9f8-109">Otherwise, remove the `Continue For` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c3c4d-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c3c4d-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0c9f8-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0c9f8-110">See also</span></span>
 
-- [<span data-ttu-id="c3c4d-111">Istruzione Continue</span><span class="sxs-lookup"><span data-stu-id="c3c4d-111">Continue Statement</span></span>](../../visual-basic/language-reference/statements/continue-statement.md)
-- [<span data-ttu-id="c3c4d-112">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="c3c4d-112">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)
+- [<span data-ttu-id="0c9f8-111">Istruzione continue</span><span class="sxs-lookup"><span data-stu-id="0c9f8-111">Continue Statement</span></span>](../language-reference/statements/continue-statement.md)
+- [<span data-ttu-id="0c9f8-112">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="0c9f8-112">For...Next Statement</span></span>](../language-reference/statements/for-next-statement.md)
