--- a/docs/visual-basic/misc/bc31171.md
+++ b/docs/visual-basic/misc/bc31171.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC31171
 ms.assetid: 51d256c6-356e-4fbb-b36e-f9976f412307
-ms.openlocfilehash: 2cc85f9f4eafe430dc03aff291fc826919347cdd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2b112431dcaae75ee23880776b3f433f7c899296
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633907"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389342"
 ---
-# <a name="character-sequence----is-not-allowed-in-an-xml-comment"></a><span data-ttu-id="3f446-102">Sequenza di caratteri '--' non consentita in un commento XML</span><span class="sxs-lookup"><span data-stu-id="3f446-102">Character sequence '--' is not allowed in an XML comment</span></span>
-<span data-ttu-id="3f446-103">Un valore letterale del commento XML contiene la sequenza di caratteri '--', che non è supportata.</span><span class="sxs-lookup"><span data-stu-id="3f446-103">An XML comment literal contains the character sequence '--', which is not supported.</span></span>  
+# <a name="character-sequence----is-not-allowed-in-an-xml-comment"></a><span data-ttu-id="e1b46-102">Sequenza di caratteri '--' non consentita in un commento XML</span><span class="sxs-lookup"><span data-stu-id="e1b46-102">Character sequence '--' is not allowed in an XML comment</span></span>
+<span data-ttu-id="e1b46-103">Un valore letterale del commento XML contiene la sequenza di caratteri '--', che non è supportata.</span><span class="sxs-lookup"><span data-stu-id="e1b46-103">An XML comment literal contains the character sequence '--', which is not supported.</span></span>  
   
- <span data-ttu-id="3f446-104">**ID errore:** BC31171</span><span class="sxs-lookup"><span data-stu-id="3f446-104">**Error ID:** BC31171</span></span>  
+ <span data-ttu-id="e1b46-104">**ID errore:** BC31171</span><span class="sxs-lookup"><span data-stu-id="e1b46-104">**Error ID:** BC31171</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3f446-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3f446-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e1b46-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e1b46-105">To correct this error</span></span>  
   
-- <span data-ttu-id="3f446-106">Rimuovere la sequenza di caratteri '--' dal valore letterale del commento XML.</span><span class="sxs-lookup"><span data-stu-id="3f446-106">Remove the character sequence '--' from the XML comment literal.</span></span>  
+- <span data-ttu-id="e1b46-106">Rimuovere la sequenza di caratteri '--' dal valore letterale del commento XML.</span><span class="sxs-lookup"><span data-stu-id="e1b46-106">Remove the character sequence '--' from the XML comment literal.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3f446-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3f446-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e1b46-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e1b46-107">See also</span></span>
 
-- [<span data-ttu-id="3f446-108">Valore letterale di commento XML</span><span class="sxs-lookup"><span data-stu-id="3f446-108">XML Comment Literal</span></span>](../../visual-basic/language-reference/xml-literals/xml-comment-literal.md)
-- [<span data-ttu-id="3f446-109">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="3f446-109">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
-- [<span data-ttu-id="3f446-110">XML</span><span class="sxs-lookup"><span data-stu-id="3f446-110">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [<span data-ttu-id="e1b46-108">Valore letterale di commento XML</span><span class="sxs-lookup"><span data-stu-id="e1b46-108">XML Comment Literal</span></span>](../language-reference/xml-literals/xml-comment-literal.md)
+- [<span data-ttu-id="e1b46-109">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="e1b46-109">XML Literals</span></span>](../language-reference/xml-literals/index.md)
+- [<span data-ttu-id="e1b46-110">XML</span><span class="sxs-lookup"><span data-stu-id="e1b46-110">XML</span></span>](../programming-guide/language-features/xml/index.md)
