--- a/docs/visual-basic/misc/bc36002.md
+++ b/docs/visual-basic/misc/bc36002.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC36002
 ms.assetid: 7b4602a9-84c9-4068-81bc-e8df03ffc130
-ms.openlocfilehash: 80f29610804c88d0878e6eaf739e911d7db60e5d
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 12636fc07984c0eedab53f756d5eed228a28a9d2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913431"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379393"
 ---
-# <a name="global-not-allowed-in-handles-local-name-expected"></a><span data-ttu-id="4c9f4-102">'Global' non è consentito negli handle; è previsto il nome locale</span><span class="sxs-lookup"><span data-stu-id="4c9f4-102">'Global' not allowed in handles; local name expected</span></span>
-<span data-ttu-id="4c9f4-103">La clausola `Handles` deve fare riferimento a un evento locale.</span><span class="sxs-lookup"><span data-stu-id="4c9f4-103">A `Handles` clause must refer to a local event.</span></span> <span data-ttu-id="4c9f4-104">La parola chiave `Global` fornisce l'accesso agli elementi di programmazione globali.</span><span class="sxs-lookup"><span data-stu-id="4c9f4-104">The `Global` keyword provides access to global programming elements.</span></span>  
+# <a name="global-not-allowed-in-handles-local-name-expected"></a><span data-ttu-id="6032b-102">'Global' non è consentito negli handle; è previsto il nome locale</span><span class="sxs-lookup"><span data-stu-id="6032b-102">'Global' not allowed in handles; local name expected</span></span>
+<span data-ttu-id="6032b-103">La clausola `Handles` deve fare riferimento a un evento locale.</span><span class="sxs-lookup"><span data-stu-id="6032b-103">A `Handles` clause must refer to a local event.</span></span> <span data-ttu-id="6032b-104">La parola chiave `Global` fornisce l'accesso agli elementi di programmazione globali.</span><span class="sxs-lookup"><span data-stu-id="6032b-104">The `Global` keyword provides access to global programming elements.</span></span>  
   
- <span data-ttu-id="4c9f4-105">**ID errore:** BC36002</span><span class="sxs-lookup"><span data-stu-id="4c9f4-105">**Error ID:** BC36002</span></span>  
+ <span data-ttu-id="6032b-105">**ID errore:** BC36002</span><span class="sxs-lookup"><span data-stu-id="6032b-105">**Error ID:** BC36002</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4c9f4-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4c9f4-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6032b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6032b-106">To correct this error</span></span>  
   
-- <span data-ttu-id="4c9f4-107">Modificare la clausola `Handles` per fare riferimento a un'istanza locale dell'evento invece dell'istanza globale.</span><span class="sxs-lookup"><span data-stu-id="4c9f4-107">Change the `Handles` clause to refer to a local instance of the event instead of the global instance.</span></span>  
+- <span data-ttu-id="6032b-107">Modificare la clausola `Handles` per fare riferimento a un'istanza locale dell'evento invece dell'istanza globale.</span><span class="sxs-lookup"><span data-stu-id="6032b-107">Change the `Handles` clause to refer to a local instance of the event instead of the global instance.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4c9f4-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4c9f4-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6032b-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6032b-108">See also</span></span>
 
-- [<span data-ttu-id="4c9f4-109">Parola chiave Global</span><span class="sxs-lookup"><span data-stu-id="4c9f4-109">Global keyword</span></span>](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names)
-- [<span data-ttu-id="4c9f4-110">Handles</span><span class="sxs-lookup"><span data-stu-id="4c9f4-110">Handles</span></span>](../../visual-basic/language-reference/statements/handles-clause.md)
-- [<span data-ttu-id="4c9f4-111">Eventi</span><span class="sxs-lookup"><span data-stu-id="4c9f4-111">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="6032b-109">Global (parola chiave)</span><span class="sxs-lookup"><span data-stu-id="6032b-109">Global keyword</span></span>](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names)
+- [<span data-ttu-id="6032b-110">Selettori</span><span class="sxs-lookup"><span data-stu-id="6032b-110">Handles</span></span>](../language-reference/statements/handles-clause.md)
+- [<span data-ttu-id="6032b-111">Events</span><span class="sxs-lookup"><span data-stu-id="6032b-111">Events</span></span>](../programming-guide/language-features/events/index.md)
