commit bilingual contents

--- a/docs/visual-basic/misc/bc30572.md
+++ b/docs/visual-basic/misc/bc30572.md
@@ -1,5 +1,5 @@
 ---
-title: Alias'<namespacename>' è già dichiarato
+title: Alias '<namespacename>' è già dichiarato
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30572
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30572
 ms.assetid: 52393bee-33c5-4738-99c7-3a40340f5a98
-ms.openlocfilehash: d57cb50d17962a18b4d049f9a9107e008b7ed6bb
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a1894088f01537e000ec8d30f262d0d2c6bd589c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621058"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390071"
 ---
-# <a name="alias-namespacename-is-already-declared"></a><span data-ttu-id="b0936-102">Alias'\<NomeSpazioDeiNomi >' è già dichiarato</span><span class="sxs-lookup"><span data-stu-id="b0936-102">Alias '\<namespacename>' is already declared</span></span>
-<span data-ttu-id="b0936-103">Si è provato a usare `Imports` per importare uno spazio dei nomi già dichiarato.</span><span class="sxs-lookup"><span data-stu-id="b0936-103">You have attempted to use `Imports` to import a namespace that is already declared.</span></span>  
+# <a name="alias-namespacename-is-already-declared"></a><span data-ttu-id="8bb6b-102">Alias '\<namespacename>' è già dichiarato</span><span class="sxs-lookup"><span data-stu-id="8bb6b-102">Alias '\<namespacename>' is already declared</span></span>
+<span data-ttu-id="8bb6b-103">Si è provato a usare `Imports` per importare uno spazio dei nomi già dichiarato.</span><span class="sxs-lookup"><span data-stu-id="8bb6b-103">You have attempted to use `Imports` to import a namespace that is already declared.</span></span>  
   
- <span data-ttu-id="b0936-104">**ID errore:** BC30572</span><span class="sxs-lookup"><span data-stu-id="b0936-104">**Error ID:** BC30572</span></span>  
+ <span data-ttu-id="8bb6b-104">**ID errore:** BC30572</span><span class="sxs-lookup"><span data-stu-id="8bb6b-104">**Error ID:** BC30572</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b0936-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b0936-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8bb6b-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8bb6b-105">To correct this error</span></span>  
   
-- <span data-ttu-id="b0936-106">Controllare lo spazio dei nomi che si sta tentando di importare.</span><span class="sxs-lookup"><span data-stu-id="b0936-106">Check the namespace you are attempting to import.</span></span>  
+- <span data-ttu-id="8bb6b-106">Controllare lo spazio dei nomi che si sta tentando di importare.</span><span class="sxs-lookup"><span data-stu-id="8bb6b-106">Check the namespace you are attempting to import.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b0936-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b0936-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8bb6b-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8bb6b-107">See also</span></span>
 
-- [<span data-ttu-id="b0936-108">Istruzione Imports (tipo e spazio dei nomi .NET)</span><span class="sxs-lookup"><span data-stu-id="b0936-108">Imports Statement (.NET Namespace and Type)</span></span>](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
-- [<span data-ttu-id="b0936-109">Alias</span><span class="sxs-lookup"><span data-stu-id="b0936-109">Alias</span></span>](../../visual-basic/language-reference/statements/alias-clause.md)
+- [<span data-ttu-id="8bb6b-108">Istruzione Imports (tipo e spazio dei nomi .NET)</span><span class="sxs-lookup"><span data-stu-id="8bb6b-108">Imports Statement (.NET Namespace and Type)</span></span>](../language-reference/statements/imports-statement-net-namespace-and-type.md)
+- [<span data-ttu-id="8bb6b-109">Alias</span><span class="sxs-lookup"><span data-stu-id="8bb6b-109">Alias</span></span>](../language-reference/statements/alias-clause.md)
