--- a/docs/visual-basic/misc/bc30272.md
+++ b/docs/visual-basic/misc/bc30272.md
@@ -1,5 +1,5 @@
 ---
-title: «<argumentname>'non è un parametro di'<methoddeclaration>»
+title: "' <argumentname> ' non è un parametro di ' <methoddeclaration> '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30272
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30272
 ms.assetid: cb9d00df-6e7c-4232-b5c3-5edddc53a65e
-ms.openlocfilehash: 2a852c53464dd886eaeb0a24fb22b53f4a1bc04a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ddad010f3d58981786cd5022eb2a564ea0d3af59
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664110"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390897"
 ---
-# <a name="argumentname-is-not-a-parameter-of-methoddeclaration"></a><span data-ttu-id="26967-102">«\<NomeArgomento >' non è un parametro di '\<methoddeclaration >»</span><span class="sxs-lookup"><span data-stu-id="26967-102">'\<argumentname>' is not a parameter of '\<methoddeclaration>'</span></span>
-<span data-ttu-id="26967-103">Una chiamata di routine fornisce un argomento aggiuntivo non definito dalla routine.</span><span class="sxs-lookup"><span data-stu-id="26967-103">A procedure call supplies an additional argument that is not defined by the procedure.</span></span>  
+# <a name="argumentname-is-not-a-parameter-of-methoddeclaration"></a><span data-ttu-id="8c1fc-102">' \<argumentname> ' non è un parametro di ' \<methoddeclaration> '</span><span class="sxs-lookup"><span data-stu-id="8c1fc-102">'\<argumentname>' is not a parameter of '\<methoddeclaration>'</span></span>
+<span data-ttu-id="8c1fc-103">Una chiamata di routine fornisce un argomento aggiuntivo non definito dalla routine.</span><span class="sxs-lookup"><span data-stu-id="8c1fc-103">A procedure call supplies an additional argument that is not defined by the procedure.</span></span>  
   
- <span data-ttu-id="26967-104">**ID errore:** BC30272</span><span class="sxs-lookup"><span data-stu-id="26967-104">**Error ID:** BC30272</span></span>  
+ <span data-ttu-id="8c1fc-104">**ID errore:** BC30272</span><span class="sxs-lookup"><span data-stu-id="8c1fc-104">**Error ID:** BC30272</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="26967-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="26967-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8c1fc-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8c1fc-105">To correct this error</span></span>  
   
-- <span data-ttu-id="26967-106">Rimuovere l'argomento superfluo dall'elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="26967-106">Remove the superfluous argument from the argument list.</span></span>  
+- <span data-ttu-id="8c1fc-106">Rimuovere l'argomento superfluo dall'elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="8c1fc-106">Remove the superfluous argument from the argument list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="26967-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="26967-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8c1fc-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8c1fc-107">See also</span></span>
 
-- [<span data-ttu-id="26967-108">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="26967-108">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [<span data-ttu-id="8c1fc-108">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="8c1fc-108">Procedure Parameters and Arguments</span></span>](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
