--- a/docs/visual-basic/misc/bc30273.md
+++ b/docs/visual-basic/misc/bc30273.md
@@ -1,5 +1,5 @@
 ---
-title: "'<specifier>' non è valido in una dichiarazione di proprietà di interfaccia"
+title: "' <specifier> ' non è valido in una dichiarazione di proprietà di interfaccia"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30273
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30273
 ms.assetid: f10c4f5f-6176-4dba-99a9-b58f3b390fba
-ms.openlocfilehash: 794d94734d283f9b1e450fbb3e57e6a7e3f5783b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: da293159d3edff95a3c12a90d7930a5e54f7fba5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664142"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390871"
 ---
-# <a name="specifier-is-not-valid-on-an-interface-property-declaration"></a><span data-ttu-id="334a0-102">'\<identificatore >' non è valido in una dichiarazione di proprietà di interfaccia</span><span class="sxs-lookup"><span data-stu-id="334a0-102">'\<specifier>' is not valid on an interface property declaration</span></span>
-<span data-ttu-id="334a0-103">Un'istruzione `Property` all'interno di un'interfaccia contiene una parola chiave non valida, ad esempio `Implements`.</span><span class="sxs-lookup"><span data-stu-id="334a0-103">A `Property` statement inside an interface contains an invalid keyword, such as `Implements`.</span></span> <span data-ttu-id="334a0-104">Un'interfaccia può solo definire i membri, non implementarli.</span><span class="sxs-lookup"><span data-stu-id="334a0-104">An interface can only define members, not implement them.</span></span>  
+# <a name="specifier-is-not-valid-on-an-interface-property-declaration"></a><span data-ttu-id="d544d-102">' \<specifier> ' non è valido in una dichiarazione di proprietà di interfaccia</span><span class="sxs-lookup"><span data-stu-id="d544d-102">'\<specifier>' is not valid on an interface property declaration</span></span>
+<span data-ttu-id="d544d-103">Un'istruzione `Property` all'interno di un'interfaccia contiene una parola chiave non valida, ad esempio `Implements`.</span><span class="sxs-lookup"><span data-stu-id="d544d-103">A `Property` statement inside an interface contains an invalid keyword, such as `Implements`.</span></span> <span data-ttu-id="d544d-104">Un'interfaccia può solo definire i membri, non implementarli.</span><span class="sxs-lookup"><span data-stu-id="d544d-104">An interface can only define members, not implement them.</span></span>  
   
- <span data-ttu-id="334a0-105">**ID errore:** BC30273</span><span class="sxs-lookup"><span data-stu-id="334a0-105">**Error ID:** BC30273</span></span>  
+ <span data-ttu-id="d544d-105">**ID errore:** BC30273</span><span class="sxs-lookup"><span data-stu-id="d544d-105">**Error ID:** BC30273</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="334a0-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="334a0-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d544d-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d544d-106">To correct this error</span></span>  
   
-- <span data-ttu-id="334a0-107">Rimuovere la parola chiave non valida dall'istruzione di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="334a0-107">Remove the invalid keyword from the declaration statement.</span></span>  
+- <span data-ttu-id="d544d-107">Rimuovere la parola chiave non valida dall'istruzione di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="d544d-107">Remove the invalid keyword from the declaration statement.</span></span>  
   
-- <span data-ttu-id="334a0-108">Spostare l'implementazione dei membri di interfaccia in una classe che implementa l'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="334a0-108">Move the implementation of interface members to a class that implements the interface.</span></span>  
+- <span data-ttu-id="d544d-108">Spostare l'implementazione dei membri di interfaccia in una classe che implementa l'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="d544d-108">Move the implementation of interface members to a class that implements the interface.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="334a0-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="334a0-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d544d-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d544d-109">See also</span></span>
 
-- [<span data-ttu-id="334a0-110">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="334a0-110">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
-- [<span data-ttu-id="334a0-111">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="334a0-111">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+- [<span data-ttu-id="d544d-110">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="d544d-110">Interface Statement</span></span>](../language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="d544d-111">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="d544d-111">Implements Statement</span></span>](../language-reference/statements/implements-statement.md)
