commit translated contents

--- a/docs/visual-basic/misc/bc30281.md
+++ b/docs/visual-basic/misc/bc30281.md
@@ -1,5 +1,5 @@
 ---
-title: Struttura '<structurename>' deve contenere almeno una variabile membro di istanza o dichiarazione di evento
+title: La struttura '<structurename>' deve contenere almeno una dichiarazione di evento o di variabile membro di istanza
 ms.date: 07/20/2015
 f1_keywords:
 - bc30281
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30281
 ms.assetid: a03ee4e2-5fea-4933-898f-7f125b25824e
-ms.openlocfilehash: cdb061337b673ce3addf6a1ac2610166037605fd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 13ec306a7c81cdd0f75d15ac6f362d77432c85de
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664069"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390741"
 ---
-# <a name="structure-structurename-must-contain-at-least-one-instance-member-variable-or-event-declaration"></a>Struttura '\<nomestruttura >' deve contenere almeno una variabile membro di istanza o dichiarazione di evento
+# <a name="structure-structurename-must-contain-at-least-one-instance-member-variable-or-event-declaration"></a>La struttura '\<structurename>' deve contenere almeno una dichiarazione di evento o di variabile membro di istanza
 Viene visualizzata una struttura funzionalmente vuota. Almeno un membro variabile deve essere dichiarato tra l'istruzione `Structure` e l'istruzione `End Structure` .  
   
  **ID errore:** BC30281  
@@ -25,6 +25,6 @@ Viene visualizzata una struttura funzionalmente vuota. Almeno un membro variabil
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Structure](../../visual-basic/language-reference/statements/structure-statement.md)
-- [Istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md)
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione Structure](../language-reference/statements/structure-statement.md)
+- [Istruzione Dim](../language-reference/statements/dim-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
