--- a/docs/visual-basic/misc/bc30390.md
+++ b/docs/visual-basic/misc/bc30390.md
@@ -1,5 +1,5 @@
 ---
-title: "'<qualifiedmethod>' non è accessibile in questo contesto perché è'<modifier>'"
+title: "' <qualifiedmethod> ' non è accessibile in questo contesto perché è' <modifier> '"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30390
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30390
 ms.assetid: 3b44ea93-56a1-48eb-b8b7-78555bfdcc63
-ms.openlocfilehash: 63beb6cf35cc6a9e956e86f8c05cffe58902e36c
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 1ee37c0f69068b9d44f28d90d333e64f086b1406
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667351"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390383"
 ---
-# <a name="qualifiedmethod-is-not-accessible-in-this-context-because-it-is-modifier"></a>'\<metodoqualificato >' non è accessibile in questo contesto perché è'\<Modifier >'
+# <a name="qualifiedmethod-is-not-accessible-in-this-context-because-it-is-modifier"></a>' \<qualifiedmethod> ' non è accessibile in questo contesto perché è' \<modifier> '
 Si è provato ad accedere a un metodo che non è accessibile in questo contesto a causa di un modificatore che è stato applicato a tale metodo.  
   
  **ID errore:** BC30390  
@@ -26,6 +26,6 @@ Si è provato ad accedere a un metodo che non è accessibile in questo contesto 
 ## <a name="see-also"></a>Vedere anche
 
 - [Livelli di accesso in Visual Basic](../programming-guide/language-features/declared-elements/access-levels.md)
-- [Private](../../visual-basic/language-reference/modifiers/private.md)
-- [Protected](../../visual-basic/language-reference/modifiers/protected.md)
-- [Friend](../../visual-basic/language-reference/modifiers/friend.md)
+- [Privata](../language-reference/modifiers/private.md)
+- [Protetto](../language-reference/modifiers/protected.md)
+- [Amico](../language-reference/modifiers/friend.md)
