--- a/docs/visual-basic/misc/bc30610.md
+++ b/docs/visual-basic/misc/bc30610.md
@@ -1,5 +1,5 @@
 ---
-title: "La classe<classname>'' deve essere dichiarata come ' MustInherit ' oppure eseguire l'override dei seguenti membri ' MustOverride ' ereditati: < memberName (s) >"
+title: "La classe '<classname>' deve essere dichiarata 'MustInherit' oppure eseguire l'override dei seguenti membri 'MustOverride' ereditati: <membername(s)>"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30610
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30610
 ms.assetid: 7fba7a3b-c918-44ba-ae85-20312615c1ce
-ms.openlocfilehash: 039a01e7ed6f94465f469a6eb5aeec26f33bbb55
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: e1c8a69c1399d82a3f6f31926fbc307ca93e52b6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667184"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389786"
 ---
-# <a name="class-classname-must-either-be-declared-mustinherit-or-override-the-following-inherited-mustoverride-members-membernames"></a>La classe\<' nomeclasse >' deve essere dichiarata come ' MustInherit ' oppure eseguire l'override dei seguenti membri ' MustOverride ' \<ereditati: MemberName (s) >
+# <a name="class-classname-must-either-be-declared-mustinherit-or-override-the-following-inherited-mustoverride-members-membernames"></a>La classe ' \<classname> ' deve essere dichiarata come ' MustInherit ' oppure eseguire l'override dei seguenti membri ' MustOverride ' ereditati:\<membername(s)>
 Le classi derivate da classi base contenenti membri `MustOverride` devono eseguire l'override di tali membri oppure usare il modificatore `MustInherit` .  
   
  **ID errore:** BC30610  
@@ -27,6 +27,6 @@ Le classi derivate da classi base contenenti membri `MustOverride` devono esegui
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Overrides](../../visual-basic/language-reference/modifiers/overrides.md)
-- [MustInherit](../../visual-basic/language-reference/modifiers/mustinherit.md)
+- [Override](../language-reference/modifiers/overrides.md)
+- [MustInherit](../language-reference/modifiers/mustinherit.md)
 - [Nozioni fondamentali sull'ereditarietà (Visual Basic)](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
