--- a/docs/visual-basic/misc/bc30051.md
+++ b/docs/visual-basic/misc/bc30051.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30051
 ms.assetid: a462e73e-2ff4-45ee-916f-56642dc5688c
-ms.openlocfilehash: ba392d3a1a30ed3edd015e4be4c4e25de9d20231
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 599bf5d100942c72aeed864c295dc4dd00ce0c23
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64623879"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391455"
 ---
 # <a name="paramarray-parameter-must-be-a-one-dimensional-array"></a>Il parametro ParamArray deve essere una matrice unidimensionale
 Un argomento `ParamArray` deve essere dichiarato come tipo di matrice unidimensionale. La dichiarazione specifica più di una dimensione per l'argomento `ParamArray` .  
@@ -25,6 +25,6 @@ Un argomento `ParamArray` deve essere dichiarato come tipo di matrice unidimensi
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Matrici di parametri](../../visual-basic/programming-guide/language-features/procedures/parameter-arrays.md)
-- [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md)
-- [Matrici](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [Matrici di parametri](../programming-guide/language-features/procedures/parameter-arrays.md)
+- [ParamArray](../language-reference/modifiers/paramarray.md)
+- [Matrici](../programming-guide/language-features/arrays/index.md)
