--- a/docs/visual-basic/misc/bc30060.md
+++ b/docs/visual-basic/misc/bc30060.md
@@ -1,5 +1,5 @@
 ---
-title: Conversione da '<type1>'a'<type2>' non può verificarsi in un'espressione costante
+title: La conversione da '<type1>' a '<type2>' non può verificarsi in un'espressione costante
 ms.date: 07/20/2015
 f1_keywords:
 - bc30060
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30060
 ms.assetid: bea60254-67b6-4881-91d2-47854c4d073c
-ms.openlocfilehash: 680a3504a463956e689eca25da979edb511af8e3
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d7f0ca442a000c36c50a58e719b9d4c23f4bd5a8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61936149"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391261"
 ---
-# <a name="conversion-from-type1-to-type2-cannot-occur-in-a-constant-expression"></a>Conversione da '\<type1 >' a '\<type2 >' non può verificarsi in un'espressione costante
+# <a name="conversion-from-type1-to-type2-cannot-occur-in-a-constant-expression"></a>La conversione da '\<type1>' a '\<type2>' non può verificarsi in un'espressione costante
 L'espressione di inizializzazione in un'istruzione `Const` restituisce un tipo di dati che non può essere convertito nel tipo dichiarato della costante.  
   
  **ID errore:** BC30060  
@@ -25,5 +25,5 @@ L'espressione di inizializzazione in un'istruzione `Const` restituisce un tipo d
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Const](../../visual-basic/language-reference/statements/const-statement.md)
-- [Conversioni di tipi in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+- [Istruzione Const](../language-reference/statements/const-statement.md)
+- [Conversioni di tipi in Visual Basic](../programming-guide/language-features/data-types/type-conversions.md)
