--- a/docs/visual-basic/misc/bc30274.md
+++ b/docs/visual-basic/misc/bc30274.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro '<parametername>'di'<methodname>' ha già un argomento corrispondente
+title: Il parametro '<parametername>' di '<methodname>' ha già un argomento corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - bc30274
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30274
 ms.assetid: 5ce7ed2b-d3b3-409d-946a-65f4c9af986a
-ms.openlocfilehash: 54415918aa96bceff3cae361699171d76105face
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 14ea9535517b7ecff4ba003e12c19fbc3a443856
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664088"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390819"
 ---
-# <a name="parameter-parametername-of-methodname-already-has-a-matching-argument"></a>Parametro '\<nomeparametro >' di '\<NomeMetodo >' ha già un argomento corrispondente
+# <a name="parameter-parametername-of-methodname-already-has-a-matching-argument"></a>Il parametro '\<parametername>' di '\<methodname>' ha già un argomento corrispondente
 Un argomento viene passato in base al nome più di una volta nella stessa chiamata di routine.  
   
  **ID errore:** BC30274  
@@ -27,4 +27,4 @@ Un argomento viene passato in base al nome più di una volta nella stessa chiama
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Passaggio di argomenti in base alla posizione e al nome](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [Passaggio di argomenti in base alla posizione e al nome](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
