--- a/docs/visual-basic/misc/bc30275.md
+++ b/docs/visual-basic/misc/bc30275.md
@@ -1,5 +1,5 @@
 ---
-title: "'<specifier>' non è valido in una dichiarazione di evento di interfaccia"
+title: "' <specifier> ' non è valido in una dichiarazione di evento di interfaccia"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30275
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30275
 ms.assetid: bd12c952-c619-4753-8d6d-90ef4086fdc2
-ms.openlocfilehash: 2a2678f6f963aea3571fd3eb19577a7f0c5305e3
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 34f39626633a7efe8dae0d4f7f971f96909312f1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61934212"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390806"
 ---
-# <a name="specifier-is-not-valid-on-an-interface-event-declaration"></a>'\<identificatore >' non è valido in una dichiarazione di evento di interfaccia
+# <a name="specifier-is-not-valid-on-an-interface-event-declaration"></a>' \<specifier> ' non è valido in una dichiarazione di evento di interfaccia
 Un'istruzione `Event` all'interno di un'interfaccia contiene una parola chiave non consentita, ad esempio `Implements`. Un'interfaccia può solo definire i membri, non implementarli.  
   
  **ID errore:** BC30275  
@@ -27,5 +27,5 @@ Un'istruzione `Event` all'interno di un'interfaccia contiene una parola chiave n
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Interface](../../visual-basic/language-reference/statements/interface-statement.md)
-- [Istruzione Implements](../../visual-basic/language-reference/statements/implements-statement.md)
+- [Istruzione Interface](../language-reference/statements/interface-statement.md)
+- [Istruzione Implements](../language-reference/statements/implements-statement.md)
