--- a/docs/visual-basic/misc/bc30278.md
+++ b/docs/visual-basic/misc/bc30278.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30278
 ms.assetid: fee206b9-8dc0-436f-9909-abd8c17957f8
-ms.openlocfilehash: 352874bf2291aaa593847447803c4d7a0943ecef
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 187dc6c426ee42863ff76db989e67af672b99d59
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61934173"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390793"
 ---
 # <a name="sub-or-function-expected-after-delegate"></a>È previsto 'Sub' o 'Function' dopo 'Delegate'
 Un'istruzione `Delegate` non specifica una routine `Sub` o `Function` . La parola chiave `Sub` o `Function` deve seguire immediatamente la parola chiave `Delegate` .  
@@ -27,5 +27,5 @@ Un'istruzione `Delegate` non specifica una routine `Sub` o `Function` . La parol
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Delegate](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [Routine](../../visual-basic/programming-guide/language-features/procedures/index.md)
+- [Istruzione Delegate](../language-reference/statements/delegate-statement.md)
+- [Procedure](../programming-guide/language-features/procedures/index.md)
