--- a/docs/visual-basic/misc/bc30554.md
+++ b/docs/visual-basic/misc/bc30554.md
@@ -1,5 +1,5 @@
 ---
-title: "'<namespacename>' è ambiguo"
+title: "' <namespacename> ' è ambiguo"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30554
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30554
 ms.assetid: f79778e7-a300-4eef-999f-c5cb22e0fbfa
-ms.openlocfilehash: 62a2e2102bdb87d40f98f583480b57cd6202d189
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 8b459b9d7e7bf042ba844ff34620b4106c2a72c4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625168"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390227"
 ---
-# <a name="namespacename-is-ambiguous"></a>'\<NomeSpazioDeiNomi >' è ambiguo
-È stato specificato un nome che è ambiguo ed è quindi in conflitto con un altro nome. Il compilatore Visual Basic è privo di eventuali regole di risoluzione dei conflitti. è necessario evitare ambiguità tra nomi manualmente.  
+# <a name="namespacename-is-ambiguous"></a>' \<namespacename> ' è ambiguo
+È stato specificato un nome che è ambiguo ed è quindi in conflitto con un altro nome. Il compilatore Visual Basic non dispone di regole di risoluzione dei conflitti. è necessario evitare di ambiguare i nomi.  
   
  **ID errore:** BC30554  
   
@@ -25,5 +25,5 @@ ms.locfileid: "64625168"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Spazi dei nomi in Visual Basic](../../visual-basic/programming-guide/program-structure/namespaces.md)
-- [Istruzione Namespace](../../visual-basic/language-reference/statements/namespace-statement.md)
+- [Spazi dei nomi in Visual Basic](../programming-guide/program-structure/namespaces.md)
+- [Istruzione Namespace](../language-reference/statements/namespace-statement.md)
