--- a/docs/visual-basic/misc/bc30562.md
+++ b/docs/visual-basic/misc/bc30562.md
@@ -1,5 +1,5 @@
 ---
-title: «<name>'è ambiguo tra le dichiarazioni nei moduli'<modulename1>'e'<modulename2>»
+title: "' <name> ' è ambiguo tra le dichiarazioni nei moduli ' <modulename1> ' è <modulename2> '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30562
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30562
 ms.assetid: 5c230046-deb8-44d1-b25e-d4c6b59e0c3c
-ms.openlocfilehash: 68984efc929de4f407af752af1b2023093e1b5e4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 8c90e499578d74bf7fbaf7644610c0792934632c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625144"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390124"
 ---
-# <a name="name-is-ambiguous-between-declarations-in-modules-modulename1-and-modulename2"></a>«\<nome >' è ambiguo tra le dichiarazioni nei moduli\<modulename1 >' e '\<modulename2 >»
-È stato specificato un nome che è ambiguo ed è quindi in conflitto con un altro nome. Il compilatore Visual Basic non dispone di regole di risoluzione dei conflitti. è necessario evitare ambiguità tra nomi manualmente.  
+# <a name="name-is-ambiguous-between-declarations-in-modules-modulename1-and-modulename2"></a>' \<name> ' è ambiguo tra le dichiarazioni nei moduli ' \<modulename1> ' è \<modulename2> '
+È stato specificato un nome che è ambiguo ed è quindi in conflitto con un altro nome. Il compilatore Visual Basic non dispone di alcuna regola di risoluzione dei conflitti; è necessario evitare di ambiguare i nomi.  
   
  **ID errore:** BC30562  
   
@@ -25,5 +25,5 @@ ms.locfileid: "64625144"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Spazi dei nomi in Visual Basic](../../visual-basic/programming-guide/program-structure/namespaces.md)
-- [Istruzione Namespace](../../visual-basic/language-reference/statements/namespace-statement.md)
+- [Spazi dei nomi in Visual Basic](../programming-guide/program-structure/namespaces.md)
+- [Istruzione Namespace](../language-reference/statements/namespace-statement.md)
